fix small typos

--- a/_posts/2023-1-22-homily.md
+++ b/_posts/2023-1-22-homily.md
@@ -32,9 +32,9 @@ image: 146.png
 물론 돈이 좀 더 들고 법령도 개정해야 하지만 청와대도 옮기는데 그것 하나 못 할리 없습니다.
 
 약자들을 사람답게 살도록 하기는커녕 더욱 더 노예처럼 살도록 억압하면서, 그것을 복지라고 주장하니 어처구니가 없습니다.
-그런데 더 분노하게 하고 슬프고 심지어 절망적인 것은 그 억압을 복지라고 받아들이고 감사하는 약자들의 모습니다.
+그런데 더 분노하게 하고 슬프고 심지어 절망적인 것은 그 억압을 복지라고 받아들이고 감사하는 약자들의 모습입니다.
 
-오늘 복음에서 종은 잠도 못 자고 주인을 기다랍니다. 돌아온 주인은 고마운 마음에 자리에 앉히고, 오히려 그 종의 시중을 듭니다. 
+오늘 복음에서 종은 잠도 못 자고 주인을 기다립니다. 돌아온 주인은 고마운 마음에 자리에 앉히고, 오히려 그 종의 시중을 듭니다. 
 하지만 우리나라의 국무총리, 서울시장, 정치인들은 그렇게 잠을 못 자는 종에게 일하는 거 좋아한다면서 일할 수 있는 자유를 주겠다면서, 쉴 시간을 빼앗고 그것을 복지로 선전합니다.
 또 국민들은 기뻐하고 고마워합니다. 어쩌다 우리가 이렇게 되었을까요? 일이 우리에게 복지가 되어 버렸기 때문입니다.
 
