--- a/_posts/2023-1-22-homily.md
+++ b/_posts/2023-1-22-homily.md
@@ -46,7 +46,7 @@ image: 146.png
 
 형제 자매 여러분 우리는 수준을 높여야 합니다. 잠시 쉬고 노는 휴식 정도를 위해 살지 맙시다. 그건 노예들에게 주어지는 시간입니다. 
 그들이 다음 일을 위해 잠시 쉬는 시간을 가지는 겁니다. 
-하지만 우리는 안식과 여가를 누릴 권리가 있습니다.
+하지만 우리는 안식과 여가(餘暇)를 누릴 권리가 있습니다.
 그런데 이것은 시인, 철학자, 예술가, 그리고 신앙인들만이 실천할 수 있습니다. 
 안식은 영원의 영역에 들어갈 수 있는 이들만이, 즉 경신(敬神)을 살아가는 이들만이 참여할 수 있는 영역이기 때문입니다.
 하늘이 내려준 복지라고 할 수 있을 겁니다. 우리의 수준은 적어도 이 정도가 되어야 합니다. 아멘.
@@ -63,4 +63,4 @@ image: 146.png
   </li>
   </ul>
 
-참고자료 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=171&keyword=&gubun=01">경신덕 (마리아사랑 가톨릭사전)</a>
+참고자료 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=171&keyword=&gubun=01">경신덕(敬神德) (마리아사랑 가톨릭사전)</a>
