fix 루카복음 링크

--- a/_posts/2020-10-11-marry.md
+++ b/_posts/2020-10-11-marry.md
@@ -4,6 +4,15 @@ layout: post
 title: 연중 28주일 
 image: cana.jpeg
 
+first_reading:  이사야서의 말씀입니다. 25,6-10ㄱ
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  ▥ 사도 바오로의 필리피서 말씀입니다. 4,12-14.19-20
+
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  마태오가 전한 거룩한 복음입니다. 22,1-14
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
+
 ---
  
 임금님은 아들을 위한 혼인잔치를 열었고 사람들은 오려고 하지 않습니다. 인생은 그야말로 큰 잔치입니다. 그 중에 미사는 잔치 중에 잔치입니다. 우리의 삶은 축제와 같습니다. 우리가 스위스 에서 신앙생활을 하면서 접할 수 없는 것이 축제적인 것입니다. 스위스에서는 국민성 때문인지 축 제가 드뭅니다. 축제는 삶의 풍요로움을 의미하며 주님과 함께할 때 더욱 풍요로움을 느끼고 감사 드릴 수 있는 것입니다. 미사는 축제의 핵심이며 그리스도는 우리를 초대하시는 Gastgeber(주최자)입니다.
