--- a/_posts/2020-12-6-buttons.md
+++ b/_posts/2020-12-6-buttons.md
@@ -4,6 +4,14 @@ layout: post
 title: 대림 제2주일 (인권 주일, 사회 교리 주간)
 image: paris.jpeg
 
+first_reading:  이사야서의 말씀입니다. 40,1-5.9-11
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  베드로 2서의 말씀입니다. 3,8-14
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  마르코가 전한 거룩한 복음의 시작입니다. 1,1-8
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
+
 ---
 
 영화나 드라마에서 사제나 수녀의 역을 맡은 배우들을 볼 때 종종 뭔가 잘 어울리지 않는다는 인상을 받습니다. 수녀 신부가 저렇게 인물이 좋을 리가 없다는 생각 때문이 아니라 알 듯 모를 듯한 어색함에 불편함이 가시지 않습니다. 물론 이건 제 개인적인 평가일 뿐입니다. 여러분은 다르게 생각하실 수도 있겠죠.
