--- a/_posts/2020-4-12-bird.md
+++ b/_posts/2020-4-12-bird.md
@@ -4,6 +4,13 @@ layout: post
 title: 주일 주님부활대축일
 image: chick.jpg
 
+first_reading:   사도행전의 말씀입니다. 10,34ㄱ.37ㄴ-43
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 콜로새서 말씀입니다. 3,1-4
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  요한이 전한 거룩한 복음입니다. 20,1-9
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
 ---
 
 마음에 품고 있었던 큰 희망이 사라졌다는 것을 확인하는 순간 절망이 시작됩니다. 사도 베드로와 요한, 그리고 마리아 막달레나의 이 절망을 체험합니다. 이들은 주님의 시신이 사라졌다는 소식을 접하고 놀라 무덤으로 달려갑니다. 그리고 모두 “몸을 숙여” 무덤 안을 바라보고 슬퍼하고 절망합니다. 
