--- a/_posts/2020-5-17-vaccine.md
+++ b/_posts/2020-5-17-vaccine.md
@@ -4,6 +4,13 @@ layout: post
 title: 부활 제6주일  
 image: jj.jpeg
 
+first_reading: 사도행전의 말씀입니다. 8,5-8.14-17 
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading: 베드로 1서의 말씀입니다. 3,15-18 
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  요한이 전한 거룩한 복음입니다. 14,15-21
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
 ---
 
 우리는 주님승천 대축일과 성령강림 대축일을 준비하고 있습니다. 오늘 복음은 이 큰 축일들에 앞서 성령이 어떤 분이신지 알려줍니다.
