--- a/_posts/2020-5-24-doubt.md
+++ b/_posts/2020-5-24-doubt.md
@@ -4,6 +4,13 @@ layout: post
 title: 주님승천대축일 (홍보 주일)
 image: plaque-with-doubting-thomas-387335.jpg
 
+first_reading:  사도행전의 시작입니다. 1,1-11
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 에페소서 말씀입니다. 1,17-23
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:   마태오가 전한 거룩한 복음의 끝입니다. 28,16-20
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
 ---
 
 한국 교회는 오늘 주님승천 대축일을 거행합니다. 높은 곳에서 낮은 곳으로 오셨던 주님은 다시 높은 곳으로 향하십니다. 고개를 들어 사명을 다 마치신 후 돌아가시는 그분을 바라봅시다. 그리고 우리는 소명에 충실한 삶을 살고 있는지 돌아봐야겠습니다.
