--- a/_posts/2020-9-13-zabelka.md
+++ b/_posts/2020-9-13-zabelka.md
@@ -4,6 +4,13 @@ layout: post
 title: 연중 제 24주일 
 image: zabelka.jpeg
 
+first_reading:  집회서의 말씀입니다. 27,30―28,7
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 로마서 말씀입니다. 14,7-9
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  마태오가 전한 거룩한 복음입니다. 18,21-35
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
 ---
 
 빚을 져 보신 적이 있으신가요? 아는 분 중에 채무를 진 분이 계십니다. 그 분에 따르면‚ 채무자로서의 삶은 삶을 사는 게 아니다.‘라고 합니다. 세상 사람들이 모두 자기 빚을 갚으라고 요구하는 사람들처럼 보인다고 합니다. 공포감이 큽니다.
