--- a/_posts/2020-9-27-tax.md
+++ b/_posts/2020-9-27-tax.md
@@ -4,6 +4,14 @@ layout: post
 title: 연중 26주일 한가위 미사
 image: kirche_geld.png
 
+first_reading:  에제키엘 예언서의 말씀입니다. 18,25-28
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 필리피서 말씀입니다. 2,1-11
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  마태오가 전한 거룩한 복음입니다. 21,28-32
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
+
 ---
  
 우리는 이번에 행사가 없이 단촐하게 추석 명절을 보내게 되었습니다. 그러나 마음은 주님께 감사하여야 겠고 생명 그리고 영적 은혜를 주신 부모님들, 조상들께 감사를 드려야 겠습니다.
