--- a/_posts/2021-11-14-sos.md
+++ b/_posts/2021-11-14-sos.md
@@ -1,8 +1,19 @@
 ---
 
 layout: post
-title: "" 
+title: 연중 제33주일(세계 가난한 이의 날)
 image: sos.jpg
+
+first_reading:  다니엘 예언서의 말씀입니다.
+12,1-3
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading: 히브리서의 말씀입니다.
+10,11-14.18 
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  마르코가 전한 거룩한 복음입니다.
+13,24-32
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
 
 ---
  
