--- a/_posts/2021-11-28-3300.md
+++ b/_posts/2021-11-28-3300.md
@@ -4,6 +4,16 @@ layout: post
 title: 대림 첫째주일
 image: 3300.jpg
 
+first_reading:  예레미야서의 말씀입니다.
+33,14-16
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 테살로니카 1서 말씀입니다.
+3,12―4,2
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  루카 21,25-28.34-36
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=21
+
+
 ---
 
 벌써 대림절이 시작되었습니다. 금방 모든 대림초에 불이 붙는 성탄이 다가올 것입니다. 시간은 신비롭습니다. 한편으로는 느리게 가는 듯 하다가 다른 한편으로는 빠르게 갑니다. 시간은 두 가지로 나눠 집니다. Quantity 적인 그냥 지나가는 시간인 크로노스와 Quality 측면에서 밀도 있는 시간을 의미하는 카이로스가 있습니다. 여러분들은 어떤 삶을 사셨나요? 길기만 한 삶을 사셨나요, 아니면 열매 있는 삶을 사셨나요? 우리는 한 해를 보내고 새로운 한 해를 시작하면서 우리의 삶 안에 그리스도의 은총을 통하여 농밀한 삶이 되도록 겸손히 청해야 겠습니다.
