--- a/_posts/2021-3-28-518.md
+++ b/_posts/2021-3-28-518.md
@@ -4,6 +4,16 @@ layout: post
 title: 성지주일 
 image: 이경남.jpeg
 
+first_reading:  이사야서의 말씀입니다.
+50,4-7
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 필리피서 말씀입니다.
+2,6-11
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  마르코가 전한 우리 주 예수 그리스도의 수난기입니다.
+14,1―15,47
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
 ---
 
 성지주일이 시작되었습니다. 부활 전에 정점에 도달하는 순간입니다. 사람이란 묘한 존재인 것 같습니다. 불과 며칠 전에 성지가지를 들고 예수님께 호산나를 외쳤으나 3-4 일 후에 제 2 독서에서 이야기 하듯이 ‘하느님의 아들을 십자가에 못박으시오!’ 외칩니다. 사람이란 존재는 쉽게 변합니다. 태초에 인간은 다른 사람을 처벌하는 데 사용되어 왔고 인간은 다른 사람을 죽음에 이르는 말
