--- a/_posts/2021-4-18-mug.md
+++ b/_posts/2021-4-18-mug.md
@@ -4,6 +4,15 @@ layout: post
 title: 부활 제 3주일
 image: mug.jpg
 
+first_reading:  사도행전의 말씀입니다.
+3,13-15.17-19
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  요한 1서의 말씀입니다.
+2,1-5ㄱ
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  루카 24,35-48
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=24
+
 ---
 
 예전에 제가 광화문 광장 쪽 스타벅스에서 약속 때문에 커피를 마신 일이 있었습니다. 그런데 커피가 담긴 머그 잔에 자국이 있었는데 여자 립스틱 자국이 있었습니다. 그런 것에 따지는 것이 귀찮았던 저는 그냥 커피를 다 마셨고 내려가서 직원에게 잘 닦아야 하겠다고 이야기 하셨습니다. 그 머그잔을 닦았더라도 립스틱 자국이 남아 있었던 것이죠. 이것을 통해 ‘아무리 닦아도 흔적이 남는구나.’ 생각을 하게 됩니다.
