--- a/_posts/2021-5-9-cpr.md
+++ b/_posts/2021-5-9-cpr.md
@@ -1,8 +1,19 @@
 ---
 
 layout: post
-title: ""
+title:  부활 제6주일
 image: cpr.jpeg
+
+first_reading:  사도행전의 말씀입니다.
+10,25-26.34-35.44-48
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  요한 1서의 말씀입니다.
+4,7-10
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  요한이 전한 거룩한 복음입니다.
+15,9-17
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
 
 --- 
 오늘 예수님은 "너희는 나의 벗이다." 라고 말씀하십니다. 그러나 이것은 끝까지 들어야 할 것입니다. 여기서 나오는 벗은 일반 친구 사이의 우정과는 다릅니다. 
