--- a/_posts/2022-10-9-insider.md
+++ b/_posts/2022-10-9-insider.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: ""
+title: 연중 제28주일
 first_reading: 열왕기 하권 5,14-17
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=14
 second_reading: 티모테오 1서 1,12-17
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=162&p=2
-gospel: 루카가 전한 거룩한 복음입니다.17,11-19
+gospel: 루카 17,11-19
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=17
 image: naaman.jpeg
 
