--- a/_posts/2022-12-11-homily.md
+++ b/_posts/2022-12-11-homily.md
@@ -6,6 +6,13 @@ gospel: 마태오 11,2-11
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=11
 image: Battesimo_di_Cristo.jpg
 
+
+
+first_reading:  이사야서의 말씀입니다.35,1-6ㄴ.10
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  야고보서의 말씀입니다.5,7-10
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+
 ---
 
 영화 <a href="https://www.imdb.com/title/tt4627352/">'목자이자 도살자'</a>의 
