--- a/_posts/2022-5-22-oma.md
+++ b/_posts/2022-5-22-oma.md
@@ -1,9 +1,15 @@
 ---
 
 layout: post
-title: 부활 제 6주일
-first_reading: 제 1 독서> 사도행전 15, 1-2.22-29, 제 2 독서 요한 묵시록 21,10-14,22-23, 복음 요한복음서 14,23-29
+title: 부활 제 6주일 
 image: anointing.jpg
+
+first_reading:  사도행전 15, 1-2.22-29
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  요한 묵시록 21,10-14,22-23
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  요한복음서 14,23-29
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
 
 ---
 
