--- a/_posts/2023-1-1-homily.md
+++ b/_posts/2023-1-1-homily.md
@@ -4,6 +4,14 @@ layout: post
 title: 천주의 성모 마리아 대축일
 image: 제기동.jpeg
 
+first_reading:  민수기의 말씀입니다.6,22-27
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 갈라티아서 말씀입니다.4,4-7
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  루카 2,16-21
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=2
+
+
 ---
 
 2004년, 저는 <a href="https://m.catholictimes.org/mobile/article_view.php?aid=269280">서울 제기동에 있는 행려자 식당</a>에서 약 일 년을 일했습니다. 하루에 약 100-150명의 행려자들이 와서 점심을 해결하는 곳입니다. 수사님들께서 자원봉사자들의 도움을 얻어 운영하고 계십니다. 제 일은 문지기였습니다. 클럽 앞에 사람들이 긴 줄로 서 있듯 여름이고 겨울이고 식당 앞에는 긴 줄이 있습니다. 자리가 나면 한 명씩 들어가 앉습니다. 술을 마셨으면 들어가는 게 허락되지 않습니다. 그것을 감시하는 게 제 일이었습니다. 식당 출입을 위한 조건이 하나 더 있었습니다. 바로 500원을 내야 한다는 것입니다.
