--- a/_posts/2023-1-22-homily.md
+++ b/_posts/2023-1-22-homily.md
@@ -4,6 +4,14 @@ layout: post
 title: 설
 image: 146.png
 
+first_reading:  민수기의 말씀입니다.6,22-27
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  야고보서의 말씀입니다.4,13-15
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  루카 12,35-40
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=12
+
+
 ---
 
 얼마 전 한국 뉴스를 듣다 146번 버스 얘기에 귀가 솔깃해졌습니다. 제가 휴가 중 종종 이용하는 버스입니다. 
