--- a/_posts/2023-3-12-homily.md
+++ b/_posts/2023-3-12-homily.md
@@ -4,6 +4,12 @@ title: 사순 제 3주일
 layout: post 
 image: water.jpg
 
+first_reading:  탈출기의 말씀입니다.17,3-7
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 로마서 말씀입니다.5,1-2.5-8
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  요한이 전한 거룩한 복음입니다.4,5-42
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
 ---
 <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=14">마르코 복음 14,13</a>에서 주님께서는 
 “물동이를 메고 가는 남자를 따라가”면 파스카 만찬이 열리는 장소에 이를 거라고 말씀하십니다. 
