--- a/_posts/2023-3-19-blind.md
+++ b/_posts/2023-3-19-blind.md
@@ -5,6 +5,13 @@ layout: post
 bonstetten: true
 image: blind.jpg
 
+first_reading:   사무엘기 상권의 말씀입니다.16,1ㄱㄹㅁㅂ.6-7.10-13ㄴ
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading: 사도 바오로의 에페소서 말씀입니다.5,8-14 
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  요한이 전한 거룩한 복음입니다.9,1-41
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
 ---
 
 오늘 복음에는 주님 덕분에 눈을 뜨고 주님의 영광을 볼 수 있게 된 사람의 이야기가 나옵니다. 우리는 어둠 속에 있습니다.
