--- a/_posts/2020-1-26-homily.md
+++ b/_posts/2020-1-26-homily.md
@@ -1,8 +1,14 @@
 ---
 
 layout: post
-title: ""
+title: 연중 제3주일 (해외 원조 주일)
 image: capernaum.jpeg
+first_reading:  이사야서의 말씀입니다. 8,23ㄷ―9,3
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 코린토 1서 말씀입니다. 1,10-13.17
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  마태오가 전한 거룩한 복음입니다. 4,12-23
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
 
 ---
 
