--- a/_posts/2021-10-24-blind.md
+++ b/_posts/2021-10-24-blind.md
@@ -1,8 +1,19 @@
 ---
 
 layout: post
-title: ""
+title:  연중 제30주일 민족들의 복음화를 위한 미사 (전교 주일)
 image: blind.jpeg
+
+first_reading:  이사야서의 말씀입니다.
+2,1-5
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 로마서 말씀입니다.
+10,9-18
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  마태오가 전한 거룩한 복음입니다.
+28,16-20
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
 
 ---
 
