--- a/_posts/2021-12-12-john.md
+++ b/_posts/2021-12-12-john.md
@@ -1,8 +1,18 @@
 ---
 
 layout: post
-title: 대림 3주일
+title: 대림 3주일 (자선 주일)
 image: john.jpeg
+
+first_reading:  스바니야 예언서의 말씀입니다.
+3,14-18ㄱ
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 필리피서 말씀입니다.
+4,4-7
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  루카 3,10-18
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=3
+
 
 ---
 
