--- a/_posts/2021-12-25-fire.md
+++ b/_posts/2021-12-25-fire.md
@@ -4,6 +4,16 @@ layout: post
 title: 성탄 미사
 image: stollen.jpg
 
+first_reading:  이사야서의 말씀입니다.
+52,7-10
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading: 히브리서의 말씀입니다.
+1,1-6 
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  요한이 전한 거룩한 복음입니다.
+1,1-18
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
 ---
 
 
