--- a/_posts/2021-2-21-trainer.md
+++ b/_posts/2021-2-21-trainer.md
@@ -4,6 +4,17 @@ layout: post
 title: 사순 제1주일
 image: tiger.jpg
 
+first_reading:  창세기의 말씀입니다.
+9,8-15
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading: 베드로 1서의 말씀입니다.
+3,18-22 
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:   마르코가 전한 거룩한 복음입니다.
+1,12-15
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
+
 ---
 
 한국에서 개신교 신자들과 얘기할 때 종종 “구원 받으셨습니까?”라는 질문을 듣습니다. 침례교나 성결교를 비롯한 많은 교파들이 세례를 강조합니다. 세례와 구원을 동일시 할 정도로 말입니다. 따라서 세례 후의 인간은 거듭난, 이전과는 완전히 다른 존재로 받아들여집니다. 한편 루터는 완전히 반대편에 서 있습니다. 그도 세례의 중요성은 인정했지만, 세례를 받아도 자유가 없어 욕망의 세계에서 헤맨다고 말합니다. 가톨릭 교회는 중간 정도의 입장을 고수합니다: 인간은 세례를 통해 원죄로부터 거듭나지만 죄의 상처를 간직한 채 살아가야 합니다. 하지만 인간의 자유가 실현되는 것을 불가능하게 할 정도의 결정적 상처는 아니라고 봅니다.
