--- a/_posts/2021-5-23-mary.md
+++ b/_posts/2021-5-23-mary.md
@@ -4,6 +4,17 @@ layout: post
 title: 성령강림대축일
 image: the-annunciation-on-the-left-the-archangel-gabriel-approaches-the-praying-virgin-87f3a2-1024.jpg
 
+first_reading:  사도행전의 말씀입니다.
+2,1-11
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 코린토 1서 말씀입니다.
+12,3ㄷ-7.12-13
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  요한이 전한 거룩한 복음입니다.
+20,19-23
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
+
 ---
 
 평화를 빕니다. 오늘은 성령강림대축일이자 또한 미사를 통해 라우렌시아 자매님을 기리고 있습니다. 오늘 부른 <a href="https://maria.catholic.or.kr/sungga/bbs/bbs_print.asp?num=47&id=20614&ref=7060&menu=4827">부속가</a> 4 절에 ‘병든 것을 고치소서’ 내용이 나옵니다. 라우렌시아 자매님은 마지막 3 개월을 질병 고통 가운데 수 차례 수술을 받으셨지만 잘 참으셨고 그 와중에 교우들이나 저에게 폐가 될까봐 일부러 알리지 않으셨습니다. 우리는 라우렌시아 자매님이 주님 품으로 잘 가셨다고 믿고, 치유와 기쁨의 시간을 갖으시길 함께 기도해야 하겠습니다. 많이 야위어 보이신 마지막 모습이 마음이 아팠지만 부활하신 그리스도께서는 그 댓가로 영원한 삶을 주실 것입니다.
