--- a/_posts/2021-7-25-war.md
+++ b/_posts/2021-7-25-war.md
@@ -1,8 +1,19 @@
 ---
 
 layout: post
-title: ""
+title: 연중 제17주일
 image: war.jpeg
+
+first_reading:  열왕기 하권의 말씀입니다.
+4,42-44
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 에페소서 말씀입니다.
+4,1-6
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  요한이 전한 거룩한 복음입니다.
+6,1-15
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
 
 --- 
 
