--- a/_posts/2022-12-25-homily.md
+++ b/_posts/2022-12-25-homily.md
@@ -1,8 +1,15 @@
 ---
 
 layout: post
-title: ""
+title: 주님 성탄 대축일 - 낮 미사
 image: pasteur.jpg
+
+first_reading:  이사야서의 말씀입니다.52,7-10
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  히브리서의 말씀입니다.1,1-6
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  요한이 전한 거룩한 복음입니다.1,1-18
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
 
 ---
 
