--- a/_posts/2022-2-13-prolife.md
+++ b/_posts/2022-2-13-prolife.md
@@ -1,8 +1,15 @@
 ---
 
 layout: post
-title: ""
+title: 연중 제6주일
 image: pray-pro-life.jpg
+
+first_reading:  예레미야서의 말씀입니다.17,5-8
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 코린토 1서 말씀입니다.15,12.16-20
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  루카 6,17.20-26
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=6
 
 ---
 
