--- a/_posts/2022-2-27-beam.md
+++ b/_posts/2022-2-27-beam.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: ""
+title: 연중 제8주일
 first_reading: 집회서 27,4-7
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=128&p=27
 second_reading: 사도 바오로의 코린토 1서 15,54-58
