--- a/_posts/2022-6-12-bahn.md
+++ b/_posts/2022-6-12-bahn.md
@@ -4,6 +4,12 @@ layout: post
 title: 지극히 거룩하신 삼위일체 대축일
 image: road.jpeg
 
+first_reading:  잠언의 말씀입니다.8,22-31
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 로마서 말씀입니다.5,1-5
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  요한이 전한 거룩한 복음입니다.16,12-15
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
 ---
 
 평화를 빕니다.
