--- a/_posts/2023-2-12-homily.md
+++ b/_posts/2023-2-12-homily.md
@@ -4,6 +4,14 @@ title: 연중 제 6 주일
 layout: post 
 image: ironlung.jpeg
 
+first_reading:  집회서의 말씀입니다.15,15-20
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 코린토 1서 말씀입니다.2,6-10
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  마태오가 전한 거룩한 복음입니다.5,17-37
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+
+
 ---
 
 예수님께서는 우리들의 의로움이 율법학자들과 바리사이들의 그것을 능가해야 한다고 말씀하십니다. 
