--- a/_posts/2023-2-26-homily.md
+++ b/_posts/2023-2-26-homily.md
@@ -4,6 +4,12 @@ title: 사순 제 1주일
 layout: post 
 image: ausmalbild.jpg
 
+first_reading:   창세기의 말씀입니다.2,7-9; 3,1-7
+first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+second_reading:  사도 바오로의 로마서 말씀입니다.5,12-19
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+gospel:  마태오가 전한 거룩한 복음입니다.4,1-11
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
 ---
 
 성 토마스 아퀴나스는 덕론에서 인간의 어리석음에 대해 논합니다. 
