마태복음 링크

--- a/_posts/2020-10-11-marry.md
+++ b/_posts/2020-10-11-marry.md
@@ -9,8 +9,8 @@ first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.as
 second_reading:  ▥ 사도 바오로의 필리피서 말씀입니다. 4,12-14.19-20
 
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다. 22,1-14
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+gospel:  마태 22,1-14
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=22
 
 
 ---
