--- a/_posts/2020-6-28-shunem.md
+++ b/_posts/2020-6-28-shunem.md
@@ -8,8 +8,8 @@ first_reading:  열왕기 하권의 말씀입니다. 4,8-11.14-16ㄴ
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
 second_reading:  사도 바오로의 로마서 말씀입니다. 6,3-4.8-11
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다. 10,37-42
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+gospel:  마태 10,37-42
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=10
 
 ---
 
