--- a/_posts/future-dates/2023-7-16-homily.md
+++ b/_posts/future-dates/2023-7-16-homily.md
@@ -7,8 +7,8 @@ first_reading:  이사야서의 말씀입니다.55,10-11
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
 second_reading:  사도 바오로의 로마서 말씀입니다.8,18-23
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다.13,1-23
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+gospel:  마태 13,1-23
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=13
 
 ---
 
