--- a/_posts/2020-2-23-homily.md
+++ b/_posts/2020-2-23-homily.md
@@ -7,8 +7,8 @@ first_reading: 레위기의 말씀입니다. 19,1-2.17-18
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
 second_reading:  사도 바오로의 코린토 1서 말씀입니다. 3,16-23
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다. 5,38-48
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+gospel:  마태 5,38-48
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=5
 
 ---
 
