--- a/_posts/2020-9-27-tax.md
+++ b/_posts/2020-9-27-tax.md
@@ -8,8 +8,8 @@ first_reading:  에제키엘 예언서의 말씀입니다. 18,25-28
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
 second_reading:  사도 바오로의 필리피서 말씀입니다. 2,1-11
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다. 21,28-32
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+gospel:  마태 21,28-32
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=21
 
 
 ---
