--- a/_posts/2021-10-24-blind.md
+++ b/_posts/2021-10-24-blind.md
@@ -10,9 +10,8 @@ first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.as
 second_reading:  사도 바오로의 로마서 말씀입니다.
 10,9-18
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다.
-28,16-20
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+gospel:  마태 28,16-20
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=28
 
 
 ---
