--- a/_posts/2023-2-12-homily.md
+++ b/_posts/2023-2-12-homily.md
@@ -8,8 +8,8 @@ first_reading:  집회서의 말씀입니다.15,15-20
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
 second_reading:  사도 바오로의 코린토 1서 말씀입니다.2,6-10
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다.5,17-37
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+gospel:  마태 5,17-37
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=5
 
 
 ---
