--- a/_posts/future-dates/2023-6-25-homily.md
+++ b/_posts/future-dates/2023-6-25-homily.md
@@ -7,8 +7,8 @@ first_reading:  신명기의 말씀입니다.30,1-5
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
 second_reading: 사도 바오로의 에페소서 말씀입니다.4,29―5,2 
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다.18,19ㄴ-22
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+gospel:  마태 18,19ㄴ-22
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=18
 
 ---
 
