신부님 -> 저는

--- a/_posts/2021-7-25-war.md
+++ b/_posts/2021-7-25-war.md
@@ -17,7 +17,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 --- 
 
-찬미예수님. 생각보다 많이 오셨네요. 신부님도 잠시 2박 3일 독일 모젤에 일도 있고 잠시 휴식을 할 겸 다녀왔습니다. 숙박을 하고 아침을 먹다가 이가 깨졌습니다. 그 길로 다시 스위스로 돌아와서 이를 치료 받았습니다. 모든 일정이 취소되고 계획이 변경되었습니다.
+찬미예수님. 생각보다 많이 오셨네요. 저도 잠시 2박 3일 독일 모젤에 일도 있고 잠시 휴식을 할 겸 다녀왔습니다. 숙박을 하고 아침을 먹다가 이가 깨졌습니다. 그 길로 다시 스위스로 돌아와서 이를 치료 받았습니다. 모든 일정이 취소되고 계획이 변경되었습니다.
 기대가 깨진다는 것이 참 씁쓸했습니다. 실망스럽고 힘들었습니다.
 
 기대가 있다는 것은 그것이 이루어져야 한다는 갈망이 있다는 것을 의미합니다. 오바마가 2009 년도 당선 당시에 많은 기대가 있었습니다. 당선 후 정치적 행보를 보고 노벨상을 받았습니다. 상 받은 후에 <a href="https://www.nbcnews.com/news/world/u-s-bombed-iraq-syria-pakistan-afghanistan-libya-yemen-somalia-n704636">리비아, 아프가니스탄 등을 비롯한 7개의 나라를 폭격했습니다.</a> 미국 역사상 많은 나라를 폭격하고 장기간 폭격한 대통령으로 기록되었습니다. 2013 년도에 프란치스코 교황님이 당선되었을 때 많은 사람들이 기뻐하였고 평화에 대한 기대감이 있었습니다.
