--- a/_posts/2021-12-25-fire.md
+++ b/_posts/2021-12-25-fire.md
@@ -4,14 +4,11 @@ layout: post
 title: 성탄 미사
 image: stollen.jpg
 
-first_reading:  이사야서의 말씀입니다.
-52,7-10
+first_reading:  이사야서52,7-10
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=52
-second_reading: 히브리서의 말씀입니다.
-1,1-6 
+second_reading: 히브리서1,1-6 
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:  요한이 전한 거룩한 복음입니다.
-1,1-18
+gospel:  요한 1,1-18
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=1
 
 ---
@@ -37,4 +34,3 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 여러분들은 주님의 말씀을 항상 모시고 있는지요? 우리는 병들어 있습니다. 주님을 마시고 주님을 통해 정화합시다. 이 빛을 밖으로 갖고 나가서 불을 질러야 합니다. 세상에게 예수님을 믿어야 한다고 알려야 합니다. 세상은 방화범을 미워합니다. 그러나 우리는 말씀의 불을 전해야 하고 그러다가 손해를 본다면 세상에서 손해를 입을 수는 있어도 하늘나라에서는 영광일 것입니다.
 
 저는 오늘 아침에 몸이 회복되어 크리스마스 슈톨렌 빵을 잘라서 먹었습니다. 이렇듯이 우리가 잘 정화된다면 하늘에서 영광의 빵을 먹을 수 있지 않을까요? 우리 모두 정화되어 하늘에서 주님을 찬미합시다. 아멘.
-
