--- a/_posts/2021-4-18-mug.md
+++ b/_posts/2021-4-18-mug.md
@@ -4,11 +4,9 @@ layout: post
 title: 부활 제 3주일
 image: mug.jpg
 
-first_reading:  사도행전의 말씀입니다.
-3,13-15.17-19
+first_reading:  사도행전3,13-15.17-19
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
-second_reading:  요한 1서의 말씀입니다.
-2,1-5ㄱ
+second_reading:  요한 1서2,1-5ㄱ
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
 gospel:  루카 24,35-48
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=24
