--- a/_posts/2021-10-10-tree.md
+++ b/_posts/2021-10-10-tree.md
@@ -4,14 +4,11 @@ layout: post
 title: 연중 제28주일
 image: 자캐오_나무.jpeg
 
-first_reading:   지혜서의 말씀입니다.
-7,7-11
+first_reading:   지혜서7,7-11
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
-second_reading:  히브리서의 말씀입니다.
-4,12-13
+second_reading:  히브리서4,12-13
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:  마르코가 전한 거룩한 복음입니다.
-10,17-30
+gospel:  마르코 10,17-30
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=10
 
 
