--- a/_posts/2021-11-28-3300.md
+++ b/_posts/2021-11-28-3300.md
@@ -4,11 +4,9 @@ layout: post
 title: 대림 첫째주일
 image: 3300.jpg
 
-first_reading:  예레미야서의 말씀입니다.
-33,14-16
+first_reading:  예레미야서33,14-16
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
-second_reading:  사도 바오로의 테살로니카 1서 말씀입니다.
-3,12―4,2
+second_reading:  사도 바오로의 테살로니카 1서  3,12―4,2
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
 gospel:  루카 21,25-28.34-36
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=21
