--- a/_posts/2021-2-21-trainer.md
+++ b/_posts/2021-2-21-trainer.md
@@ -4,14 +4,11 @@ layout: post
 title: 사순 제1주일
 image: tiger.jpg
 
-first_reading:  창세기의 말씀입니다.
-9,8-15
+first_reading:  창세기9,8-15
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
-second_reading: 베드로 1서의 말씀입니다.
-3,18-22 
+second_reading: 베드로 1서3,18-22 
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:   마르코가 전한 거룩한 복음입니다.
-1,12-15
+gospel:   마르코 1,12-15
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=1
 
 
@@ -21,9 +18,9 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 그렇습니다. 우리는 세례를 통해 원죄를 벗어나지만 그 상처를 간직하고 살고 있습니다. 오늘 듣는 노아의 방주 이야기는 이것을 형상화하고 있습니다: 죄로 물든 세상을 정화하기 위해 하느님은 대홍수를 내리십니다. 노아와 가족은 방주 덕에 살아남습니다. 그런데 그들만 살 수 있었던 게 아닙니다. 몇몇 ‘들짐승’들도 목숨을 건졌던 겁니다. 흥미로운 것은 오늘 복음 역시 흡사한 내용을 전하고 있다는 겁니다. 세례를 받으신 주님은 사막으로 가십니다. 하지만 혼자 생활하시지 않습니다. 복음은 “들짐승들과 함께 지내셨다.”고 말합니다. 거듭 태어나더라도 그는 여전히 한계를 가지고 살아갑니다. 사실이 아닐까요? 우리 역시 세례를 받았지만 우리 안에서 동물적인 습성을 발견하고 놀랄 때가 있습니다. 그렇다면 이 내면의 수성(獸性)을 어떻게 대해야 할까요? 세 가지 정도로 구분해 볼 수 있습니다.
 
-첫째, 그냥 그대로 살아가는 겁니다. 얼마 전 취리히에 다녀왔습니다. 식당들은 문을 닫았는데 마리화나를 파는 상점은 문을 열고 운영하더군요. 한껏 욕망을 즐기는 시대의 현주소를 볼 수 있었습니다. 
+첫째, 그냥 그대로 살아가는 겁니다. 얼마 전 취리히에 다녀왔습니다. 식당들은 문을 닫았는데 마리화나를 파는 상점은 문을 열고 운영하더군요. 한껏 욕망을 즐기는 시대의 현주소를 볼 수 있었습니다.
 
-둘째, 금욕적인 삶입니다. 쉽지 않은 길이지만 가능합니다. 단 세속에 사는 우리들에게는 비현실적인 방법입니다. 
+둘째, 금욕적인 삶입니다. 쉽지 않은 길이지만 가능합니다. 단 세속에 사는 우리들에게는 비현실적인 방법입니다.
 
 세 번째가 우리의 길이 아닐까 싶습니다. 바로 조련사의 길입니다. 사자와 호랑이를 다루는 조련사의 인터뷰를 본 적이 있습니다. “어떻게 녀석들이 선생님 앞에서는 개, 고양이처럼 얌전한가요?”라고 기자가 묻더군요. “게임의 규칙이라는 게 있습니다. 그것만 가르쳐 주면 됩니다.” 욕망이 설치도록 내버려 두는 것도, 그것을 완전히 자제하는 것도 답이 아닙니다. 그것과 대화하면서 규칙을 정하고 그에 따른 보상과 대가를 치르게 해야 합니다. 이 사회적, 개인적 훈련의 과정을 우리는 ‘문화’라고 부릅니다. 또 이것을 익힌 이를 두고 “교양 있다.”고 말합니다.
 
