--- a/_posts/2021-5-23-mary.md
+++ b/_posts/2021-5-23-mary.md
@@ -4,14 +4,11 @@ layout: post
 title: 성령강림대축일
 image: the-annunciation-on-the-left-the-archangel-gabriel-approaches-the-praying-virgin-87f3a2-1024.jpg
 
-first_reading:  사도행전의 말씀입니다.
-2,1-11
+first_reading:  사도행전2,1-11
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
-second_reading:  사도 바오로의 코린토 1서 말씀입니다.
-12,3ㄷ-7.12-13
+second_reading:  사도 바오로의 코린토 1서  12,3ㄷ-7.12-13
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=153&p=12
-gospel:  요한이 전한 거룩한 복음입니다.
-20,19-23
+gospel:  요한 20,19-23
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=20
 
 
