--- a/_posts/2021-3-28-518.md
+++ b/_posts/2021-3-28-518.md
@@ -7,8 +7,7 @@ first_reading:  이사야서 50,4-7
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=50
 second_reading:  필리피서 2,6-11
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
-gospel:  마르코가 전한 우리 주 예수 그리스도의 수난기입니다.
-14,1―15,47
+gospel:  마르코가 전한 우리 주 예수 그리스도의 수난기입니다. 14,1―15,47
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=14
 
 ---
