--- a/_posts/2023-1-1-homily.md
+++ b/_posts/2023-1-1-homily.md
@@ -25,7 +25,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 형제, 자매 여러분, 이게 바로 하느님의 어머니가 지닌 신분입니다. 우리가 주님께 죄를 지었더라도 성모님을 공경한다면, 주님은 당신 어머니의 대한 사랑 때문에, 그리고 이 어머니의 품위 때문에 우리의 죄를 못 본 척 하실 수도 있습니다. 그래서 성모님에 대한 공경은 배반자인 인간이 천국에 들어 갈 수 있는 비공식적인 길입니다. 이것이 바로 <a href="https://pds.catholic.or.kr/pdsm/bbs_view.asp?num=9&id=184439&menu=4834">성모님이 ‘죄인의 피난처’</a>라고 불려왔던 이유입니다.
 
-베드로를 열쇠를 가지고 천국 정문을 지키고 있습니다. 어느 날 안을 내부를 살펴보니 자기가 들여보내지 않았던 이들이 들어와 있었다고 합니다. 알고 보니 성모님이 뒷문을 열어놓았다 했답니다.
+베드로는 열쇠를 가지고 천국 정문을 지키고 있습니다. 어느 날 안을 내부를 살펴보니 자기가 들여보내지 않았던 이들이 들어와 있었다고 합니다. 알고 보니 성모님이 뒷문을 열어놓았다 했답니다.
 
 오늘 복음에서 성모님은 목자들과 천사들의 말을 “모두 마음속에 곰곰이 간직하고 되새겼다”고 합니다. 천상의 어머니를 공경합시다. 그러면 모두 기억 하셔서, 마지막 심판 때 우리를 위해 “그래도 얘는 나한테 잘 해줬다.”고 주님께 귀띔해 주실 겁니다. 그리고 이 한 마디가 모든 것을 결정할 것입니다. 아멘.
 
