말씀입니다. 제거

--- a/_posts/2020-2-23-homily.md
+++ b/_posts/2020-2-23-homily.md
@@ -3,9 +3,9 @@
 layout: post
 title: 연중 제7주일
 image: pest.jpg
-first_reading: 레위기의 말씀입니다. 19,1-2.17-18 
+first_reading: 레위기  19,1-2.17-18 
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=103&p=19
-second_reading:  사도 바오로의 코린토 1서 말씀입니다. 3,16-23
+second_reading:  사도 바오로의 코린토 1서  3,16-23
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=153&p=3
 gospel:  마태 5,38-48
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=5
