--- a/_posts/2022-12-25-homily.md
+++ b/_posts/2022-12-25-homily.md
@@ -4,25 +4,25 @@ layout: post
 title: 주님 성탄 대축일 - 낮 미사
 image: pasteur.jpg
 
-first_reading:  이사야서의 말씀입니다.52,7-10
+first_reading:  이사야서 52,7-10
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=52
-second_reading:  히브리서의 말씀입니다.1,1-6
+second_reading:  히브리서 1,1-6
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=165&p=1
-gospel:  요한이 전한 거룩한 복음입니다.1,1-18
+gospel:  요한 1,1-18
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=1
 
 ---
 
-성탄 카드가 많이 도착하는 시기입니다 어제도 우편물이 몇 개 와 있더군요. 
+성탄 카드가 많이 도착하는 시기입니다 어제도 우편물이 몇 개 와 있더군요.
 그 중 하나는 세무서에서 온 것이었습니다.
 성탄 전날 세금고지서를 받으니 그리 신나지는 않았습니다.
 제가 지난 해 52.80프랑의 세금을 덜 냈으니 1월 9일까지 납부하라는 내용이었습니다.
-이게 바로 세상의 로고스입니다. 
+이게 바로 세상의 로고스입니다.
 정확히 내용을 전달하고 요구합니다.
-사실 이런 명료함이 없다면 국가가 운영될 수 없겠죠. 
+사실 이런 명료함이 없다면 국가가 운영될 수 없겠죠.
 과학도 명료하기 때문에 우리에게 혜택을 안겨줍니다.
 
-그런데 이런 상상을 합니다. 한 천재적인 물리학자가 세상의 모든 물리법칙을 설명해 낼 수 있는 아주 명료한 공식을 발견했습니다. 
+그런데 이런 상상을 합니다. 한 천재적인 물리학자가 세상의 모든 물리법칙을 설명해 낼 수 있는 아주 명료한 공식을 발견했습니다.
 그래서 기쁜 마음으로 집에 가는데 마침 그 날이 결혼기념일이라 꽃가게에 들릅니다.
 그곳에서 아내에게 선물할 꽃을 사려고 하는데 고민에 빠집니다. 어떤 색의 장미를 선물해야 할지 도무지 알 수 없기 때문입니다.
 한 송이는 너무 외로워 보일 것 같고 한 다발은 너무 무거워 보일 것 같고 흰 색이 좋을지 아니면 빨간 색이 좋을지 도대체 생각에 생각이 꼬리를 뭅니다.
@@ -39,7 +39,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 고귀한 것들은 언제나 숨어 있습니다.
 그래서 시는 언어를 깨뜨려 숨겨진 것을 드려내려 안간힘을 씁니다.
 화가는 그가 본 것을 캠퍼스에 온전히 담아 내려하지만 그럴 수 없어 광기에 빠집니다.
-도식화할 수 있는 것은 현실의 표면에 지나지 않습니다. 
+도식화할 수 있는 것은 현실의 표면에 지나지 않습니다.
 따라서 그리스도와의 참된 만남은 것은 이 명료한 표면을 깨뜨리고 들어가 고귀한 그분의 모습을 바라볼 때 비로소 이루어집니다.
 그 모습은 고귀하기에 그래서 명료하지 않기에 이해하려 하기 보다는 바라보아야 합니다. 그리고 감탄해야 합니다.
 안타까운 사실은 우리가 이렇게 바라보고 감탄하는 능력을 상실한 시대에 살고 있다는 것입니다.
@@ -61,7 +61,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 실제로 그렇게 망가진 삶을 살고 있을 수도 있습니다.
 바로 그렇기 때문에 인간이 되신 하느님을 바라보고 그분의 영역에 들어가야 합니다.
 그러면 로고스의 무한한 화음이 우리의 불협화음을 품어 안아서 그 누구도 생각할 수 없었던 새로운 음악으로 승화될 것입니다.
-이전의 삶이 그대로 유지되지만 새로운 삶으로 탄생할 것입니다. 
+이전의 삶이 그대로 유지되지만 새로운 삶으로 탄생할 것입니다.
 사람들은 삶의 의미를 찾아야 한다고 말합니다.
 그런데 삶의 의미는 찾아지는 종류의 것이 아닙니다.
 그것은 이처럼 만들어지는 것입니다.
