--- a/_posts/2020-1-26-homily.md
+++ b/_posts/2020-1-26-homily.md
@@ -3,9 +3,9 @@
 layout: post
 title: 연중 제3주일 (해외 원조 주일)
 image: capernaum.jpeg
-first_reading:  이사야서의 말씀입니다. 8,23ㄷ―9,3
+first_reading:  이사야서  8,23ㄷ―9,3
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=8
-second_reading:  사도 바오로의 코린토 1서 말씀입니다. 1,10-13.17
+second_reading:  사도 바오로의 코린토 1서  1,10-13.17
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=153&p=1
 gospel:  마태 4,12-23
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=4
