--- a/_posts/2020-12-13-wait.md
+++ b/_posts/2020-12-13-wait.md
@@ -4,11 +4,11 @@ layout: post
 title: 대림 제3주일 (자선 주일)
 
 
-first_reading:  이사야서의 말씀입니다. 61,1-2ㄱ.10-11
+first_reading:  이사야서  61,1-2ㄱ.10-11
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=61
-second_reading:  사도 바오로의 테살로니카 1서 말씀입니다. 5,16-24
+second_reading:  사도 바오로의 테살로니카 1서  5,16-24
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=159&p=5
-gospel:  요한이 전한 거룩한 복음입니다. 1,6-8.19-28
+gospel:  요한  1,6-8.19-28
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=1
 
 image: 800px-Ruins_of_the_North_Palace_of_Nebuchadnezzar_II_at_Babylon,_Saddam's_palace_appear_on_the_background.jpg
