--- a/_posts/2023-1-1-homily.md
+++ b/_posts/2023-1-1-homily.md
@@ -4,9 +4,9 @@ layout: post
 title: 천주의 성모 마리아 대축일
 image: 제기동.jpeg
 
-first_reading:  민수기의 말씀입니다.6,22-27
+first_reading:  민수기 6,22-27
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=104&p=6
-second_reading:  사도 바오로의 갈라티아서 말씀입니다.4,4-7
+second_reading:  사도 바오로의 갈라티아서 4,4-7
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=155&p=4
 gospel:  루카 2,16-21
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=2
@@ -28,4 +28,3 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 베드로는 열쇠를 가지고 천국 정문을 지키고 있습니다. 어느 날 안을 내부를 살펴보니 자기가 들여보내지 않았던 이들이 들어와 있었다고 합니다. 알고 보니 성모님이 뒷문을 열어놓았다 했답니다.
 
 오늘 복음에서 성모님은 목자들과 천사들의 말을 “모두 마음속에 곰곰이 간직하고 되새겼다”고 합니다. 천상의 어머니를 공경합시다. 그러면 모두 기억 하셔서, 마지막 심판 때 우리를 위해 “그래도 얘는 나한테 잘 해줬다.”고 주님께 귀띔해 주실 겁니다. 그리고 이 한 마디가 모든 것을 결정할 것입니다. 아멘.
-
