--- a/_posts/2023-1-22-homily.md
+++ b/_posts/2023-1-22-homily.md
@@ -4,9 +4,9 @@ layout: post
 title: 설
 image: 146.png
 
-first_reading:  민수기의 말씀입니다.6,22-27
+first_reading:  민수기 6,22-27
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=104&p=6
-second_reading:  야고보서의 말씀입니다.4,13-15
+second_reading:  야고보서 4,13-15
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=166&p=4
 gospel:  루카 12,35-40
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=12
@@ -14,35 +14,35 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 ---
 
-얼마 전 한국 뉴스를 듣다 146번 버스 얘기에 귀가 솔깃해졌습니다. 제가 휴가 중 종종 이용하는 버스입니다. 
+얼마 전 한국 뉴스를 듣다 146번 버스 얘기에 귀가 솔깃해졌습니다. 제가 휴가 중 종종 이용하는 버스입니다.
 <a href="https://goo.gl/maps/3XB1r8vDZ98GHQXLA">노원역 홍콩반점</a>이 솜씨가 좋습니다.
-거기에 갈 때면 이 버스를 탑니다. 그 옆에 있는 반찬가게에 갈 때도 이 버스를 탑니다. 그런데 이 버스 노선이 좀 독특합니다. 
-아마 가장 긴 노선을 가진 시내버스가 아닌가 싶은데요. 
-상계동 주공 APT 7단지에서 출발합니다. 중계와 먹골을 지나 건국대로 향합니다. 
-그 후 청담대교를 타고 한강을 건너 청담동을 거쳐 강남역에 도착합니다. 
-서울 외곽과 강남을 연결하는 긴 노선인 겁니다. 또 여기에 타는 사람들도 남다릅니다. 
+거기에 갈 때면 이 버스를 탑니다. 그 옆에 있는 반찬가게에 갈 때도 이 버스를 탑니다. 그런데 이 버스 노선이 좀 독특합니다.
+아마 가장 긴 노선을 가진 시내버스가 아닌가 싶은데요.
+상계동 주공 APT 7단지에서 출발합니다. 중계와 먹골을 지나 건국대로 향합니다.
+그 후 청담대교를 타고 한강을 건너 청담동을 거쳐 강남역에 도착합니다.
+서울 외곽과 강남을 연결하는 긴 노선인 겁니다. 또 여기에 타는 사람들도 남다릅니다.
 낮에는 일반 버스와 별다른 차이가 없습니다. 하지만 새벽은 다릅니다.
-언젠가 운동하려고 일찍 나온 적이 있는데 사람들을 한 가득 태우고 가더군요. 
-수락, 의정부 등에 있는 청소 노동자들이 새벽에 이 버스를 타고 강남으로 청소일을 가는 겁니다. 
-그래서 첫 차는 4시 5분에 있습니다 종점인 강남까지 늦어도 5시 30분에서 6시 사이에 도착해야 하기 때문입니다. 
+언젠가 운동하려고 일찍 나온 적이 있는데 사람들을 한 가득 태우고 가더군요.
+수락, 의정부 등에 있는 청소 노동자들이 새벽에 이 버스를 타고 강남으로 청소일을 가는 겁니다.
+그래서 첫 차는 4시 5분에 있습니다 종점인 강남까지 늦어도 5시 30분에서 6시 사이에 도착해야 하기 때문입니다.
 가장 일찍 출발하는 시내버스 가운데 하나라고 합니다.
 
-이 버스에 대한 얘기가 나오니 관심을 가지고 봤습니다. 146번 버스 이용자이신 어르신 한 분이 국무총리에게 부탁하는 내용이었습니다. 
-당신이 4시 10분에 첫 차를 타고 강남으로 청소일을 하러 가는데 더러 지각을 한다고 하시더군요. 
-그러면서 차 시간을 10분만 더 당겨 달라고 부탁하셨습니다. 
-듣던 총리가 나중에 서울시장에게 전화로 사연을 얘기해 10분이 아닌 15분을 더 당겨 이제는 3시 50분에 출발한다고 합니다. 
+이 버스에 대한 얘기가 나오니 관심을 가지고 봤습니다. 146번 버스 이용자이신 어르신 한 분이 국무총리에게 부탁하는 내용이었습니다.
+당신이 4시 10분에 첫 차를 타고 강남으로 청소일을 하러 가는데 더러 지각을 한다고 하시더군요.
+그러면서 차 시간을 10분만 더 당겨 달라고 부탁하셨습니다.
+듣던 총리가 나중에 서울시장에게 전화로 사연을 얘기해 10분이 아닌 15분을 더 당겨 이제는 3시 50분에 출발한다고 합니다.
 번호도 새로 바꿔서 8146번을 달고 달린다고 합니다. 그러면서 이게 좋은 복지의 예로 제시되더군요.
 댓글이 900개가 넘겨 달렸는데 따뜻한 행정이라면서 사람들이 칭찬을 마다하지 않았습니다. 슬프지 않을 수 없습니다.
 
 제가 국무총리라면 상계동에서 출발하는 버스가 중계 즈음에서 동부간선도로로 달리도록 해서 성수대교나 영동대교를 건너 강남으로 가는 노선을 만들 겁니다.
-그렇게 달리면 새벽이라면 30분 안에 강남에 도착합니다. 따라서 노동자들은 한 시간 더 자고 일터로 향해도 됩니다. 
-즉 3시 50분이 아니라 5시에 출발해도 현장에 제시간에 도착할 수 있는 겁니다. 
+그렇게 달리면 새벽이라면 30분 안에 강남에 도착합니다. 따라서 노동자들은 한 시간 더 자고 일터로 향해도 됩니다.
+즉 3시 50분이 아니라 5시에 출발해도 현장에 제시간에 도착할 수 있는 겁니다.
 물론 돈이 좀 더 들고 법령도 개정해야 하지만 청와대도 옮기는데 그것 하나 못 할리 없습니다.
 
 약자들을 사람답게 살도록 하기는커녕 더욱 더 노예처럼 살도록 억압하면서, 그것을 복지라고 주장하니 어처구니가 없습니다.
 그런데 더 분노하게 하고 슬프고 심지어 절망적인 것은 그 억압을 복지라고 받아들이고 감사하는 약자들의 모습입니다.
 
-오늘 복음에서 종은 잠도 못 자고 주인을 기다립니다. 돌아온 주인은 고마운 마음에 자리에 앉히고, 오히려 그 종의 시중을 듭니다. 
+오늘 복음에서 종은 잠도 못 자고 주인을 기다립니다. 돌아온 주인은 고마운 마음에 자리에 앉히고, 오히려 그 종의 시중을 듭니다.
 하지만 우리나라의 국무총리, 서울시장, 정치인들은 그렇게 잠을 못 자는 종에게 일하는 거 좋아한다면서 일할 수 있는 자유를 주겠다면서, 쉴 시간을 빼앗고 그것을 복지로 선전합니다.
 또 국민들은 기뻐하고 고마워합니다. 어쩌다 우리가 이렇게 되었을까요? 일이 우리에게 복지가 되어 버렸기 때문입니다.
 
@@ -52,10 +52,10 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 또 그것을 사람답게 사는 거라고, 복지혜택을 받는 거라고 믿고 있는 건 아닌지 묻지 않을 수 없습니다.
 이 모든 것을 바라보는 주님은 얼마나 어처구니가 없을까요?
 
-형제 자매 여러분 우리는 수준을 높여야 합니다. 잠시 쉬고 노는 휴식 정도를 위해 살지 맙시다. 그건 노예들에게 주어지는 시간입니다. 
-그들이 다음 일을 위해 잠시 쉬는 시간을 가지는 겁니다. 
+형제 자매 여러분 우리는 수준을 높여야 합니다. 잠시 쉬고 노는 휴식 정도를 위해 살지 맙시다. 그건 노예들에게 주어지는 시간입니다.
+그들이 다음 일을 위해 잠시 쉬는 시간을 가지는 겁니다.
 하지만 우리는 안식과 여가(餘暇)를 누릴 권리가 있습니다.
-그런데 이것은 시인, 철학자, 예술가, 그리고 신앙인들만이 실천할 수 있습니다. 
+그런데 이것은 시인, 철학자, 예술가, 그리고 신앙인들만이 실천할 수 있습니다.
 안식은 영원의 영역에 들어갈 수 있는 이들만이, 즉 경신(敬神)을 살아가는 이들만이 참여할 수 있는 영역이기 때문입니다.
 하늘이 내려준 복지라고 할 수 있을 겁니다. 우리의 수준은 적어도 이 정도가 되어야 합니다. 아멘.
 
@@ -64,7 +64,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 <a href="https://m.yna.co.kr/amp/view/AKR20230102023900001">관련기사</a>
 
 관련도서
-<ul><li>독어 <a href="https://www.orellfuessli.ch/shop/home/artikeldetails/A1031243453">Josef Pieper: Muße und Kult</a></li><li>영어 
+<ul><li>독어 <a href="https://www.orellfuessli.ch/shop/home/artikeldetails/A1031243453">Josef Pieper: Muße und Kult</a></li><li>영어
 <a href="https://www.amazon.de/Leisure-Basis-Culture-Including-Philosophical/dp/1586172565">Josef Pieper: Leisure, the basis of culture</a>
   </li>
   <li>한국어 <a href="https://www.biblelife.co.kr/goods/view?no=16058">요셉 피퍼, 『여가(餘暇)와 경신(敬神)』, 김진태 역, 가톨릭대학교출판부, 2011</a>
