--- a/future-dates/2023-4-23-homily.md
+++ b/future-dates/2023-4-23-homily.md
@@ -3,9 +3,9 @@
 title:  부활 제3주일
 layout: post 
 image:  
-first_reading:  사도행전의 말씀입니다.2,14.22ㄴ-33
+first_reading:  사도행전 2,14.22ㄴ-33
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=2
-second_reading:  베드로 1서의 말씀입니다.1,17-21
+second_reading:  베드로 1서 1,17-21
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=167&p=1
 gospel:  루카 24,13-35
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=24
