--- a/future-dates/2023-4-9-homily.md
+++ b/future-dates/2023-4-9-homily.md
@@ -2,12 +2,12 @@
 
 title:  주님 부활 대축일
 layout: post 
-image:  
-first_reading:  사도행전의 말씀입니다.10,34ㄱ.37ㄴ-43
+image:  easter.jpg
+first_reading:  사도행전 10,34ㄱ.37ㄴ-43
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=10
-second_reading:  사도 바오로의 콜로새서 말씀입니다.3,1-4
+second_reading:  사도 바오로의 콜로새서 3,1-4
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=158&p=3
-gospel:  요한이 전한 거룩한 복음입니다.20,1-9
+gospel:  요한 20,1-9
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=20
 
 ---
