--- a/future-dates/2023-5-14-homily.md
+++ b/future-dates/2023-5-14-homily.md
@@ -3,11 +3,11 @@
 title:  부활 제6주일
 layout: post 
 image:  
-first_reading:  사도행전의 말씀입니다.8,5-8.14-17
+first_reading:  사도행전 8,5-8.14-17
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=8
-second_reading:  베드로 1서의 말씀입니다.3,15-18
+second_reading:  베드로 1서 3,15-18
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=167&p=3
-gospel:  요한이 전한 거룩한 복음입니다.14,15-21
+gospel:  요한 14,15-21
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=14
 
 ---
