사도바오로의

--- a/_posts/2021-3-14-fear.md
+++ b/_posts/2021-3-14-fear.md
@@ -6,7 +6,7 @@ image: Stefan_Lochner_-_Last_Judgement_-_circa_1435.jpg
 
 first_reading:  역대기 하권36,14-16.19-23
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
-second_reading:  사도 바오로의 에페소서  2,4-10
+second_reading:  에페소서  2,4-10
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=156&p=2
 gospel:  요한 3,14-21
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=3
