--- a/_posts/2022-6-12-bahn.md
+++ b/_posts/2022-6-12-bahn.md
@@ -6,7 +6,7 @@ image: road.jpeg
 
 first_reading:  잠언 8,22-31
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
-second_reading:  사도 바오로의 로마서 5,1-5
+second_reading:  로마서 5,1-5
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=5
 gospel:  요한 16,12-15
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=16
