--- a/_posts/2023-3-19-blind.md
+++ b/_posts/2023-3-19-blind.md
@@ -7,7 +7,7 @@ image: blind.jpg
 
 first_reading:   사무엘기 상권 16,1ㄱㄹㅁㅂ.6-7.10-13ㄴ
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
-second_reading: 사도 바오로의 에페소서 5,8-14 
+second_reading: 에페소서 5,8-14 
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=156&p=5
 gospel:  요한 9,1-41
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=9
