--- a/_posts/2020-12-13-wait.md
+++ b/_posts/2020-12-13-wait.md
@@ -6,7 +6,7 @@ title: 대림 제3주일 (자선 주일)
 
 first_reading:  이사야서  61,1-2ㄱ.10-11
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=61
-second_reading:  사도 바오로의 테살로니카 1서  5,16-24
+second_reading:  테살로니카 1서  5,16-24
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=159&p=5
 gospel:  요한  1,6-8.19-28
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=1
