--- a/_posts/2020-6-28-shunem.md
+++ b/_posts/2020-6-28-shunem.md
@@ -6,7 +6,7 @@ image: shunem.jpeg
 
 first_reading:  열왕기 하권  4,8-11.14-16ㄴ
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=112&p=4
-second_reading:  사도 바오로의 로마서  6,3-4.8-11
+second_reading:  로마서  6,3-4.8-11
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=6
 gospel:  마태 10,37-42
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=10
