--- a/_posts/2020-9-27-tax.md
+++ b/_posts/2020-9-27-tax.md
@@ -6,7 +6,7 @@ image: kirche_geld.png
 
 first_reading:  에제키엘 예언서  18,25-28
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=18
-second_reading:  사도 바오로의 필리피서  2,1-11
+second_reading:  필리피서  2,1-11
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=157&p=2
 gospel:  마태 21,28-32
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=21
