--- a/_posts/2021-10-24-blind.md
+++ b/_posts/2021-10-24-blind.md
@@ -6,7 +6,7 @@ image: blind.jpeg
 
 first_reading:  이사야서2,1-5
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=2
-second_reading:  사도 바오로의 로마서  10,9-18
+second_reading:  로마서  10,9-18
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=10
 gospel:  마태 28,16-20
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=28
