--- a/_posts/2021-7-25-war.md
+++ b/_posts/2021-7-25-war.md
@@ -6,7 +6,7 @@ image: war.jpeg
 
 first_reading:  열왕기 하권4,42-44
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=114&p=4
-second_reading:  사도 바오로의 에페소서  4,1-6
+second_reading:  에페소서  4,1-6
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=156&p=4
 gospel:  요한 6,1-15
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=6
