--- a/_posts/2022-2-27-beam.md
+++ b/_posts/2022-2-27-beam.md
@@ -3,7 +3,7 @@ layout: post
 title: 연중 제8주일
 first_reading: 집회서 27,4-7
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=128&p=27
-second_reading: 사도 바오로의 코린토 1서 15,54-58
+second_reading: 코린토 1서 15,54-58
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=153&p=15
 gospel: 루카 6,39-45
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=6
