--- a/_posts/2022-4-10-listen.md
+++ b/_posts/2022-4-10-listen.md
@@ -6,7 +6,7 @@ image: listen.jpg
 
 first_reading:  이사야서 50,4-7
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=50
-second_reading:  사도 바오로의 필리피서 2,6-11
+second_reading:  필리피서 2,6-11
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=157&p=2
 gospel:  루카가 전한 우리 주 예수 그리스도의 수난기입니다. 22,14―23,56
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=22
