--- a/_posts/2023-1-1-homily.md
+++ b/_posts/2023-1-1-homily.md
@@ -6,7 +6,7 @@ image: 제기동.jpeg
 
 first_reading:  민수기 6,22-27
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=104&p=6
-second_reading:  사도 바오로의 갈라티아서 4,4-7
+second_reading:  갈라티아서 4,4-7
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=155&p=4
 gospel:  루카 2,16-21
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=2
