--- a/_posts/2023-2-12-homily.md
+++ b/_posts/2023-2-12-homily.md
@@ -6,7 +6,7 @@ image: ironlung.jpeg
 
 first_reading:  집회서 15,15-20
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=128&p=15
-second_reading:  사도 바오로의 코린토 1서 2,6-10
+second_reading:  코린토 1서 2,6-10
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=153&p=2
 gospel:  마태 5,17-37
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=5
