--- a/future-dates/2023-4-9-homily.md
+++ b/future-dates/2023-4-9-homily.md
@@ -5,7 +5,7 @@ layout: post
 image:  easter.jpg
 first_reading:  사도행전 10,34ㄱ.37ㄴ-43
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=10
-second_reading:  사도 바오로의 콜로새서 3,1-4
+second_reading:  콜로새서 3,1-4
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=158&p=3
 gospel:  요한 20,1-9
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=20
