--- a/future-dates/2023-6-25-homily.md
+++ b/future-dates/2023-6-25-homily.md
@@ -5,7 +5,7 @@ layout: post
 image:  
 first_reading:  신명기 30,1-5
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
-second_reading: 사도 바오로의 에페소서 4,29―5,2 
+second_reading: 에페소서 4,29―5,2 
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=156&p=4
 gospel:  마태 18,19ㄴ-22
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=18
