--- a/_posts/2020-5-24-doubt.md
+++ b/_posts/2020-5-24-doubt.md
@@ -4,11 +4,11 @@ layout: post
 title: 주님승천대축일 (홍보 주일)
 image: plaque-with-doubting-thomas-387335.jpg
 
-first_reading:  사도행전의 시작입니다. 1,1-11
+first_reading: 사도행전 1,1-11
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=1
-second_reading:  에페소서  1,17-23
+second_reading: 에페소서 1,17-23
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=156&p=1
-gospel:   마태오가 전한 거룩한 복음의 끝입니다. 28,16-20
+gospel:  마태오가 전한 거룩한 복음의 끝입니다. 28,16-20
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=28
 
 ---
