--- a/future-dates/2023-4-9-homily.md
+++ b/future-dates/2023-4-9-homily.md
@@ -2,7 +2,7 @@
 
 title:  주님 부활 대축일
 layout: post 
-image:  easter.jpg
+image:  easter_anonym.jpg
 first_reading:  사도행전 10,34ㄱ.37ㄴ-43
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=10
 second_reading:  콜로새서 3,1-4
