--- a/_posts/2023-4-9-homily.md
+++ b/_posts/2023-4-9-homily.md
@@ -18,13 +18,11 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 죄를 뉘우치며 숨가쁘게 달려온 이들에게는 신앙이 주어집니다. 그런데 과연 무덤에 와야 했던 걸까요? 어제 파스카 성야 미사에 읽은 <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=28">마태오 복음(28,1-10)</a>에서 주님의 천사는, 또 주님께서는 직접 마리아 막달레나와 다른 마리아에게 제자들을 갈릴레아로 보내라고 명하십니다. 또 그곳에서 당신을 "보게 될 거라"는 것도 알려주십니다. 하지만 오늘 복음에서 제자들은 갈릴레아가 아니라 무덤으로 향합니다. 그래서 주님이 부활하신 흔적을 보고 그분의 부활에 대한 신앙을 가질 수는 있었지만, 안타깝게도 주님을 볼 수는 없었습니다. 당연합니다. 갈릴레아가 아닌 무덤으로 달려갔으니까요. 제자들은 죄를 반성하면서도 여전히 자기가 하고 싶은대로 하고 있는 겁니다. 만약 이들이 주님이 명에 순종해 갈길레아로 갔다면 그곳에서 주님을 뵐 수 있었을 겁니다.
 
-달리는 행위 즉 극기, 고난, 죄의 뉘우침은 우리에게 신앙을 선물합니다. 하지만 주님에 대한 순종은, 그분이 주신 사명을 충실히 수행하는 것은 우리를 주님과의 만남으로 인도해 줍니다. 심장이 뛰도록 달리면 신앙에 이르고, 그 의지를 가라 앉히면 주님과 만나게 되는 겁니다. 극기와 뉘우침은 중요하지만 비로소 주님에 대한 순종 안에서 이 모든 것은 의미를 얻게 됩니다. 시간이 지난 후 제자들은 다행히 정신을 차리고 갈릴레아로 갑니다. 물론 그곳에 가서도 계속 엉뚱한 행동들을 합니다.
+달리는 행위 즉 극기, 고난, 죄의 뉘우침은 우리에게 신앙을 선물합니다. 하지만 주님에 대한 순종은, 그분이 주신 사명을 충실히 수행하는 것은 우리를 주님과의 만남(<a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=3321&keyword=&gubun=01">지복직관</a>)으로 인도해 줍니다. 심장이 뛰도록 달리면 신앙에 이르고, 그 의지를 가라 앉히면 주님과 만나게 되는 겁니다. 극기와 뉘우침은 중요하지만 비로소 주님에 대한 순종 안에서 이 모든 것은 의미를 얻게 됩니다. 시간이 지난 후 제자들은 다행히 정신을 차리고 갈릴레아로 갑니다. 물론 그곳에 가서도 계속 엉뚱한 행동들을 합니다.
 
 인류의 수많은 전설과 신화들, 문학과 사상 같은 거대담론들은 계략과 폭력을 통해 질서에 도달한다고 믿고, 또 그것을 멋지게 그려내고 있습니다. 일리야드, 헤라클레스, 삼국지, 오늘날 왕좌의 게임 등 거의 예외가 없습니다. 힘을 통해 평화가 이루어진다고 믿기 때문입니다. 하지만 그리스도께서는 십자가 위로 올라가십니다. 순종을 통해 부활하신 후 여인들에게 평안하냐고 물으십니다. 주님은 폭력과 힘이 아니라 순종을 통해 평화가 이루어진다는 것을 알려주십니다. 하지만 우리들의 시대는 그 날 골고타 언덕에서처럼 여전히 주님을 향해 어서 내려오라고 외칩니다. 그 고통과 순종이 무슨 소용이 있냐고, 우리들은 고통이 없는 종교를 원한다고 말하는 겁니다. 또 주님을 향해 다른 사람들을 구했으면서 자기 자신은 구하지 못한다고 비아냥거리고 있습니다. 당연한 것을 이해하지 못하는 겁니다. 자식을 살리기 위해 물에 뛰어든 어머니가 어떻게 자기 자신이 사는 것을 생각할 수 있겠습니다. 나라를 구하려는 군인이 어떻게 자기 목숨을 구하려는 생각을 할 수 있겠습니다. 세상이 여전히 혼란한 것은, 우리가 부활하신 주님을 만나지 못하는 것은 여전히 뉘우침과 순종을 이해하지 못하고 있기 때문입니다. 힘을 믿고 십자가에서 내려갈 생각만 하고 있기 때문입니다.
 
 형제, 자매 여러분, 그리스도께서 부활하셨습니다. 달려갑시다. 그런데 우리가 원하는 방향이 아니라 주님께서 원하시는 그 장소로 달려갑시다. 각자의 갈릴레아로 말입니다. 제자들처럼 여러분이 처음으로 주님을 만나 여정을 나선 그 장소 말입니다. 모든 것이 시작된 그곳에서 우리는 다시 시작할 수 있을 겁니다. 만약 시간이 너무 오래되어 그곳으로 가는 길을 잊었다면 앞으로 오실 성령님께 길을 물으시면 됩니다. 아멘.
-
-참고자료> <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=3321&keyword=&gubun=01">지복직관</a>
 
 3분교리>  
 
