--- a/_posts/2022-12-11-homily.md
+++ b/_posts/2022-12-11-homily.md
@@ -47,7 +47,7 @@ second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.a
 지속될 수 없기 때문입니다.
 소방수가 방화범이 될 수 없습니다.
 경찰이 도둑이 될 수 없습니다.
-변호사가 판가가 될 수 없습니다.
+변호사가 판사가 될 수 없습니다.
 목자가 도살자가 될 수 없습니다.
 만약 그래야 하는 경우가 생긴다면
 어서 제자리로 돌아와야 합니다.
