--- a/_posts/2022-12-25-homily.md
+++ b/_posts/2022-12-25-homily.md
@@ -38,7 +38,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 언어 이전에 그것의 그림이 우리의 영혼 속에 자리 잡고 있듯이 언어가 감정을 다 담아낼 수 없듯이 말입니다.
 고귀한 것들은 언제나 숨어 있습니다.
 그래서 시는 언어를 깨뜨려 숨겨진 것을 드려내려 안간힘을 씁니다.
-화가는 그가 본 것을 캠퍼스에 온전히 담아 내려하지만 그럴 수 없어 광기에 빠집니다.
+화가는 그가 본 것을 캔버스에 온전히 담아 내려하지만 그럴 수 없어 광기에 빠집니다.
 도식화할 수 있는 것은 현실의 표면에 지나지 않습니다.
 따라서 그리스도와의 참된 만남은 것은 이 명료한 표면을 깨뜨리고 들어가 고귀한 그분의 모습을 바라볼 때 비로소 이루어집니다.
 그 모습은 고귀하기에 그래서 명료하지 않기에 이해하려 하기 보다는 바라보아야 합니다. 그리고 감탄해야 합니다.
