--- a/_posts/2023-4-9-homily.md
+++ b/_posts/2023-4-9-homily.md
@@ -12,7 +12,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 ---
 
-지난 화요일 저녁에 양파를 썰면서 성목요일에 어떤 강론을 해야 하나 생각했습니다. 그러다 불현듯 국민학교 6학년 때의 어느 날이 뇌리를 스쳤습니다. 가장 친했던 친구가 특별한 것을 보여줄테니 학교가 끝나고 함께 가자고 했습니다. 우리가 향한 곳은 어떠 아파트단지 놀이터였습니다. 그 놀이터는 조금 높은 곳에 위치해 있어서 아래를 내려다 볼 수 있었습니다. 그곳에서 친구가 저를 한 구석으로 데리고 가더니 아래를 내려다 보라고 하더군요. 그곳에는 한 수용시설이 있었습니다. 사람들이 천천히 걸어다니는 게 보였습니다. 어린 나이였지만 그들이 정신지체를 겪는 사람들이라는 짐작은 할 수 있었습니다. 그런데 친구가 묻더군요. "쟤네들 웃기지?" 제가 데답했습니다. "어, 웃겨". 이 기억이 떠오르자 갑자기 눈 앞이 캄캄해졌습니다. 제가 열 세살 나이에 괴물로 살고 있었던 것입니다. 한편으로 감사하는 마음이 들었습니다. 까맣게 잊고 있던 35년 전의 일을 주님이 되새겨주신 겁니다. 
+지난 화요일 저녁에 양파를 썰면서 성목요일에 어떤 강론을 해야 하나 생각했습니다. 그러다 불현듯 국민학교 6학년 때의 어느 날이 뇌리를 스쳤습니다. 가장 친했던 친구가 특별한 것을 보여줄테니 학교가 끝나고 함께 가자고 했습니다. 우리가 향한 곳은 어떠 아파트단지 놀이터였습니다. 그 놀이터는 조금 높은 곳에 위치해 있어서 아래를 내려다 볼 수 있었습니다. 그곳에서 친구가 저를 한 구석으로 데리고 가더니 아래를 내려다 보라고 하더군요. 그곳에는 한 수용시설이 있었습니다. 사람들이 천천히 걸어다니는 게 보였습니다. 어린 나이였지만 그들이 정신지체를 겪는 사람들이라는 짐작은 할 수 있었습니다. 그런데 친구가 묻더군요. "쟤네들 웃기지?" 제가 대답했습니다. "어, 웃겨". 이 기억이 떠오르자 갑자기 눈 앞이 캄캄해졌습니다. 제가 열 세살 나이에 괴물로 살고 있었던 것입니다. 한편으로 감사하는 마음이 들었습니다. 까맣게 잊고 있던 35년 전의 일을 주님이 되새겨주신 겁니다. 
 
 오늘 복음에서 마리아 막달레나는 제자들에게 달려갑니다. 제자들도 무덤으로 달려갑니다. 부활을 전하는 복음의 기사들은 한결같이 헐레벌떡 달리고 놀라는 이들의 모습을 전하고 있습니다. 형제 자매 여러분, 이들은 과연 어떤 마음으로 달려갔을까요? 아마도 뉘우치는 마음으로, 후회하는 마음으로 달려갔을 겁니다. 특히 남자들이 그랬을 겁니다. 철저히 주님을 배신했으니까요. 그런데 이제는 시신까지 잃어버린 겁니다. 유대교 문화 안에서 이것은 상상을 할 수 없는 정도의 수치입니다. 여러분도 지난 사순시기를 절제와 극기, 통회하며 보내셨으리라고 생각합니다. 숨차게 달려오셨는지요? 바로 제자들처럼 뉘우치는 마음으로 달려왔기에 이제는 주님의 무덤에 들어가 신앙을 굳건히 하실 수 있을 겁니다. 오늘 복음은 전합니다. "그리고 보고 믿었다."
 
@@ -29,7 +29,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 좋은 소식이 있습니다. 우리 공동체 어린이 한명이 1주일 뒤에 첫 영성체를 하고 앞으로 복사를 합니다.
 
 오늘 성당 단톡방에서 유튜브 비디오를 보내드렸는데요. <a href="https://www.vatican.va/content/francesco/en/events/event.dir.html/content/vaticanevents/en/2023/4/9/urbi-et-orbi.html">부활절을 맞아 12시에 교황님이 Urbi et Orbi라는 축복을 해주셨습니다.</a> 교황님이 축복을 해주시는 일은 매해 두번 크리스마스와 부활에 있습니다. 그리고 새로 교황님이 선출되셨을 때도 축복을 하십니다. 
-교황님 선축되신 전날에는 베드로 대성전 우측 집무실에서 축복을 해주십니다. 부활절에는 광장을 바라보며 집무실에서 하는 게 아니고, 베드로 대성전 정문 위쪽에서 베푸십니다. 
+교황님 선출되신 전날에는 베드로 대성전 우측 집무실에서 축복을 해주십니다. 부활절에는 광장을 바라보며 집무실에서 하는 게 아니고, 베드로 대성전 정문 위쪽에서 베푸십니다. 
 
 간단하게 이 역사를 알아보겠습니다. Urbi는 도시, Orbi는 지구, 전체, 세상을 의미합니다.  
 
