--- a/_posts/2022-5-22-oma.md
+++ b/_posts/2022-5-22-oma.md
@@ -27,7 +27,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 제가 아는 또 한 친구는 종소리만을 듣고 유럽의 어느 대성당 종소리인지 구분을 합니다. 그 친구는 대단한 청력을 갖고 있을 뿐만 아니라 관심이 있는 것이죠. 두 번째 작은 종소리가 다르지 않냐고 이야기를 하기도 합니다. 이 열정. 열정이 선을 넘도록 우리를 이끌어 줍니다.
 
-우리는 성령에 대해 선포합니다. 성령이 비로소 우리에게 그 길을 열어줍니다. 저는 살아오면서 이런 때가 올 지 상상도 못했는데 40대 중후반이 되니 조금 지쳤습니다. 헐떡 고개를 넘고 있는 것이죠. 여러 가지 일도 많이 있습니다. 그래서 저는 결심했습니다. ‘성령 강림 대축일을 앞두고 9 일 기도를 열심히 바쳐야겠다. 성령을 구해서 열정을 받아야 겠다.’고 작심하였습니다.
+우리는 성령에 대해 선포합니다. 성령이 비로소 우리에게 그 길을 열어줍니다. 저는 살아오면서 이런 때가 올 지 상상도 못했는데 40대 중후반이 되니 조금 지쳤습니다. 헐떡 고개를 넘고 있는 것이죠. 여러 가지 일도 많이 있습니다. 그래서 저는 결심했습니다. ‘성령 강림 대축일을 앞두고 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=380&keyword=9%EC%9D%BC+%EA%B8%B0%EB%8F%84&gubun=01">9일 기도</a>를 열심히 바쳐야겠다. 성령을 구해서 열정을 받아야 겠다.’고 작심하였습니다.
 
 성령을 받으십시오. 그렇게 된다면 복음에서 주님말씀을 비로소 깨달을 수 있습니다.
 
