--- a/_posts/2020-9-27-tax.md
+++ b/_posts/2020-9-27-tax.md
@@ -22,7 +22,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 우리 조상들은 제사라는 양식을 통해 감사를 표현하였습니다. 우리는 오늘날 집에서 제사를 드리고 있나요? 아닙니다. 우리는 우리가 받은 것들의 원천을 잊고 살아가고 있습니다.
 
-우리는 2 가지 문화 속에서 살고 있습니다.
+우리는 두 가지 문화 속에서 살고 있습니다.
 
 첫째는 죽음의 문화이고 두번째는 기억 상실의 문화입니다. 죽음의 문화는 인권이라는 이름으로 이미 태어나기도 전에 생명체를 재로 만들어 버리는 것입니다. (낙태)
 
@@ -44,4 +44,4 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 포기는 하기 힘든 것입니다. 그러기에 자신을 위해 재화를 모으며 동시에 하느님께 인색한 모습을 보이기도 합니다. 자신의 이익을 지키기 위해 은근히 그리스도의 가치를 정신화 시키는 경우도 있는데 특히 가톨릭 신자들 상당수 그런 모습이 보입니다. 부모님들은 우리를 위해 정신적으로만 희생했는지요? 그것은 아닙니다. 실재적인 포기가 있었고 언젠가 죽을 우리도 구체적인 포기 행위를 할 것입니다.
 
-교무금 뿐만 아니라 이웃과 국가를 위해 우리를 포기하는 행위는 구체적으로 이루어 져야 합니다. 이 세상의 병원의 3분의 1은 카톨릭 교회로 부터 생겼습니다. 생명을 위해 일하는 것은 구체적인 신앙의 행동입니다. 부모님의 큰 사랑을 기억하여야 겠습니다. 아멘.
+교무금 뿐만 아니라 이웃과 국가를 위해 우리를 포기하는 행위는 구체적으로 이루어져야 합니다. 이 세상의 병원의 3분의 1은 카톨릭 교회로 부터 생겼습니다. 생명을 위해 일하는 것은 구체적인 신앙의 행동입니다. 부모님의 큰 사랑을 기억하여야 겠습니다. 아멘.
