--- a/_posts/2021-4-18-mug.md
+++ b/_posts/2021-4-18-mug.md
@@ -29,5 +29,5 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 우리가 물려받은 십자가로부터 받았던 상처를 보여드리면 예수님도 거기에서 우리를 알아보십니다.
 
-<a href="https://maria.catholic.or.kr/sa_ho/list/view.asp?menugubun=saint&ctxtSaintId=2664&Orggubun=101;">토마스 아퀴나스</a>는 사람은 2 가지를 통해 이해한다고 하였습니다. 첫번째는 논리를 통해 이해한다는 것입니다. 예로는 1 더하기 3 은 4 이다. 라는 것입니다. 두번째는
+<a href="https://maria.catholic.or.kr/sa_ho/list/view.asp?menugubun=saint&ctxtSaintId=2664&Orggubun=101;">토마스 아퀴나스</a>는 사람은 두 가지를 통해 이해한다고 하였습니다. 첫번째는 논리를 통해 이해한다는 것입니다. 예로는 1 더하기 3 은 4 이다. 라는 것입니다. 두번째는
 비슷함을 통해 이해한다는 것입니다. 이것은 직관입니다. 즉 예수님 입장에서 ‘이 아이가 나랑 비슷하구나. 이 아이가 나의 자녀이구나.’ 이런 생각이 들도록 무엇보다 예수님과 비슷해야 하겠습니다. 또한 그 상처를 만들어주는 이가 있는지요? 감사해야 합니다. 아멘.
