--- a/_posts/2020-2-23-homily.md
+++ b/_posts/2020-2-23-homily.md
@@ -14,7 +14,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 아주 오랜 옛날에는 극단적인 법이 우리를 지배했습니다. 예를 들어 범죄를 저지르면 가족 몇 대를 멸한다든지 하였습니다. 비로소 구약이 되어서야 ‘눈에는 눈으로 이에는 이’로 응징하는 1:1 의 법이 성립되었습니다.
 
-이것은 오늘날 많이 볼 수 있습니다. 제가 과거에 <a href="https://de.wikipedia.org/wiki/Bauma">Bauma</a>라는 시골마을에 짧게 지냈던 적이 있었는데 그 곳에는 보자마자 ‘Grüezi’(안녕하세요) 라고 인사를 아이들이 하였습니다. 그러나 취리히 지역만 보더라도 길에서 모르는 사람이 만나면 서로 눈치를 보다가 한 사람이 인사하면 다른 사람이 바로 인사를 합니다. 어느 날 취리히의 한 식당에서는 옆 테이블에 앉은 사람들이 식사후에 돈만 지불만 하고 나서는 것을 볼 수 있었습니다. 고맙다는 말 한마디 없이 내가 받은 음식과 서비스에 해당하는 돈만 지불했던 것입니다. 일대일의 원칙인 것이지요.
+이것은 오늘날 많이 볼 수 있습니다. 제가 과거에 <a href="https://de.wikipedia.org/wiki/Bauma">바우마(Bauma)</a>라는 시골마을에 짧게 지냈던 적이 있었는데 그 곳에는 보자마자 ‘Grüezi’(안녕하세요) 라고 인사를 아이들이 하였습니다. 그러나 취리히 지역만 보더라도 길에서 모르는 사람이 만나면 서로 눈치를 보다가 한 사람이 인사하면 다른 사람이 바로 인사를 합니다. 어느 날 취리히의 한 식당에서는 옆 테이블에 앉은 사람들이 식사후에 돈만 지불만 하고 나서는 것을 볼 수 있었습니다. 고맙다는 말 한마디 없이 내가 받은 음식과 서비스에 해당하는 돈만 지불했던 것입니다. 일대일의 원칙인 것이지요.
 
 요즘 한국에서는 코로나 바이러스 감염자들에게 원망을 하는 분위기가 많이 있습니다.
 
