--- a/_posts/2020-4-12-bird.md
+++ b/_posts/2020-4-12-bird.md
@@ -17,7 +17,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 이게 그리스도가 원하시는 게 아닐까요? 몸을 숙여 절망을 직시하는 것 말입니다. 이 쓰디쓴 시간이 지난 후 부활하신 주님께서는 당신의 모습을 보여주십니다. 몸을 숙이기 전에, 내려가기 전에는 위로 올라갈 수 없는 게 부활의 원칙인 것 같습니다.
 
-얼마 전 기러기가 둥지를 떠나는 모습을 담은 타큐멘터리를 보았습니다. 이 새는 까마득한 절벽 끝에 둥지를 튼다고 합니다. 그리고 새끼들이 어느 정도 크면 절벽 밑으로 내려가 그것들을 부릅니다. 그러면 녀석들은 부모에게 날아가기 위해 망설이다가 밑으로 몸을 던집니다. 한참 떨어지다가 대부분은 바위에 부닥쳐 생을 마감 하지만 몇몇은 악착같이 날개를 퍼덕여 어미에게 날아가더군요.
+얼마 전 기러기가 둥지를 떠나는 모습을 담은 다큐멘터리를 보았습니다. 이 새는 까마득한 절벽 끝에 둥지를 튼다고 합니다. 그리고 새끼들이 어느 정도 크면 절벽 밑으로 내려가 그것들을 부릅니다. 그러면 녀석들은 부모에게 날아가기 위해 망설이다가 밑으로 몸을 던집니다. 한참 떨어지다가 대부분은 바위에 부닥쳐 생을 마감하지만 몇몇은 악착같이 날개를 퍼덕여 어미에게 날아가더군요.
 
 주님은 사랑하는 인간을 만나기 위해 낮은 곳으로 오셨고,
 인간은 부활하신 주님을 만나기 위해 인간은 몸을 숙여 어두운 동굴을 바라보며 절망해야 하고, 기러기는 부모를 만나기 위해 땅으로 몸을 던집니다. 그리고 비로소 날아오르기 시작합니다.
@@ -28,7 +28,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 손 막달레나 자매님도 천사들의 손에 의해 주님께 인도되실 겁니다.
 부활절에 죽음의 의미를 다시 묵상합니다.
 
-성당에서 장례미사가 끝난 후 관을 묘지로 보내기 전에 관에 사제는 성수를 뿌리며 고별식을 거행합니다. 그러면서 다음의 기도를 바칩니다. “하느님의 성인들이여, 오소서. 주님의 천사들이여, 마주 오소서. 이 영혼을 받아 지극히 높으신 하느님 앞에 바치소서. 이 영혼을 부르신 그리스도님, 이 영혼을 받아들이소서. 천사들이여, 이 영혼을 아브라함의 품안으로 데려가소서. 이 영혼을 받아 지극히 높으신 하느님 앞 에 바치소서. 주님, 그에게 영원한 안식을 주소서. 영원한 빛을 그에게 비추소서. 이 영혼을 받아 지극히 높으신 천주 앞에 바치소서.”
+성당에서 장례미사가 끝난 후 관을 묘지로 보내기 전에 관에 사제는 성수를 뿌리며 고별식을 거행합니다. 그러면서 다음의 기도를 바칩니다. “하느님의 성인들이여, 오소서. 주님의 천사들이여, 마주 오소서. 이 영혼을 받아 지극히 높으신 하느님 앞에 바치소서. 이 영혼을 부르신 그리스도님, 이 영혼을 받아들이소서. 천사들이여, 이 영혼을 아브라함의 품안으로 데려가소서. 이 영혼을 받아 지극히 높으신 하느님 앞에 바치소서. 주님, 그에게 영원한 안식을 주소서. 영원한 빛을 그에게 비추소서. 이 영혼을 받아 지극히 높으신 천주 앞에 바치소서.”
 
 사실 우리가 날아오르는 게 아닙니다.
 팔을 뻗어 성인들과 천사들, 부활하신 주님의 손을 움켜줘야겠습니다. 아멘.
