shma israel + add href

--- a/_posts/2020-10-11-marry.md
+++ b/_posts/2020-10-11-marry.md
@@ -6,7 +6,7 @@ image: cana.jpeg
 
 first_reading: 이사야서 25,6-10ㄱ
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=25
-second_reading: ▥ 필리피서 4,12-14.19-20
+second_reading: 필리피서 4,12-14.19-20
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=157&p=4
 gospel: 마태 22,1-14
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=22
@@ -14,7 +14,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 ---
  
-임금님은 아들을 위한 혼인잔치를 열었고 사람들은 오려고 하지 않습니다. 인생은 그야말로 큰 잔치입니다. 그 중에 미사는 잔치 중에 잔치입니다. 우리의 삶은 축제와 같습니다. 우리가 스위스에서 신앙생활을 하면서 접할 수 없는 것이 축제적인 것입니다. 스위스에서는 국민성 때문인지 축제가 드뭅니다. 축제는 삶의 풍요로움을 의미하며 주님과 함께할 때 더욱 풍요로움을 느끼고 감사드릴 수 있는 것입니다. 미사는 축제의 핵심이며 그리스도는 우리를 초대하시는 Gastgeber(주최자)입니다.
+오늘 복음에서 임금님은 아들을 위한 혼인잔치를 열었고 사람들은 오려고 하지 않습니다. 인생은 그야말로 큰 잔치입니다. 그 중에 미사는 잔치 중에 잔치입니다. 우리의 삶은 축제와 같습니다. 우리가 스위스에서 신앙생활을 하면서 접할 수 없는 것이 축제적인 것입니다. 스위스에서는 국민성 때문인지 축제가 드뭅니다. 축제는 삶의 풍요로움을 의미하며 주님과 함께할 때 더욱 풍요로움을 느끼고 감사드릴 수 있는 것입니다. 미사는 축제의 핵심이며 그리스도는 우리를 초대하시는 Gastgeber(주최자)입니다.
 
 어느 날 독일 북쪽에 사는 분이 겪으신 이야기입니다. 토요일 아침, 밖에 길에서 아가씨가 울고 있었습니다. 그 아가씨는 옷도 잘 차려입고 화장도 예쁘게 한 차림이었습니다. 그 주변에 여자 친구들도 다 잘 차려 입은 모습이었습니다. 이야기를 들어보니 오늘이 시청에서 하는 결혼식날이었다고 합니다. 그런데 결혼할 때 공무원이 남편이 될 사람에게 질문을 “당신은 이 여자를 아내로 맞아들이겠습니까?” 라고 하였는데, 거기서 남편이 “아니요.” 라고 이야기 한 뒤에 웃으며 “농담이었습니다.” 라고 대답하였다고 합니다. 그러나 규정상 첫번째 대답을 받아들이기 때문에 결혼이 무효가 되었다고 하였습니다. 그것에 대해 이의를 제기하였으나 시청 공무원으로부터 ‘한번 아니면 아니다.’ 라는 단호한 대답을 들었다고 하였습니다.
 
