--- a/_posts/2020-9-13-zabelka.md
+++ b/_posts/2020-9-13-zabelka.md
@@ -21,7 +21,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 우리가 살아가는 짧은 인생 가운데 영혼에 빚진 분에게 뉘우치고 용서를 구해야겠습니다. 무엇보다도 주님께 용서를 구해야겠습니다.
 
-제 2차 세계대전 때에 <a href="https://en.wikipedia.org/wiki/George_Benedict_Zabelka">자벨카 신부님</a>이란 분이 계셨습니다. 미국의 군종 신부로 계신 분이었고 파일럿들을 대상으로 사목하셨습니다. 그 신부님이 사목하신 파일럿들은 주로 아일랜드 출신의 카톨릭 신자들이었습니다. 그들 중 상당 수는 일본 히로시마와 나가사키에 원폭을 투하하는 업무를 맡았습니다. 원폭 투하 임무를 위한 비행 출발 전에 신부님이 파일럿들의 고해성사도 해주시고 비행기 및 원자탄 무기들도 축복하셨습니다. 현재는 개정된 종교법에 의해 무기는 축복하지 못합니다. 그들은 성공적으로 임무를 수행하였고 돌아왔을 때 환영식도 하였습니다. 감사기도도 드렸습니다.
+제 2차 세계대전 때에 <a href="https://en.wikipedia.org/wiki/George_Benedict_Zabelka">자벨카 신부님</a>이란 분이 계셨습니다. 미국의 군종 신부로 계신 분이었고 파일럿들을 대상으로 사목하셨습니다. 그 신부님이 사목하신 파일럿들은 주로 아일랜드 출신의 카톨릭 신자들이었습니다. 그들 중 상당 수는 일본 히로시마와 나가사키에 원폭을 투하하는 업무를 맡았습니다. 원폭 투하 임무를 위한 비행 출발 전에 신부님이 파일럿들의 고해성사도 해주시고 비행기 및 원자탄 무기들도 축복하셨습니다. <a href="https://maria.catholic.or.kr/mi_pr/sacrament/content.asp?key=8&bbs=0&id=192">현재는 개정된 종교법에 의해 무기는 축복하지 못합니다.</a> 그들은 성공적으로 임무를 수행하였고 돌아왔을 때 환영식도 하였습니다. 감사기도도 드렸습니다.
 
 그 중 일부 파일럿들은 폭탄 투하 후 사진을 촬영해서 돌아왔습니다. 그 사진을 본 신부님은 매우 놀랐습니다. 모든 것이 없어져 폐허로 되었기 때문이었습니다. 신부님은 ‚과연 내가 무슨 짓을 했나? 이것이 과연 옳은
 행동이었나?‘ 자문하였고 고백성사를 하러 가셨습니다. 고백을 하시고 훈계도 들으셨습니다.
