--- a/_posts/2023-3-18-retreat.md
+++ b/_posts/2023-3-18-retreat.md
@@ -169,7 +169,7 @@ not_homily: true
 라틴어로 소명은 보카치오 Vocatio. 소명은 목소리를 듣는 것입니다.
  <h2> 8.1 소명을 찾기 위해서는 하느님 말씀을 들어야 합니다. </h2>
 
-구약에서 “들어라 이스라엘” 이라고 하십니다. 우리는 끊임없이 전례를 읽고 성서를 통해서 들어야 합니다. 그러면 들립니다. 인생을 돌아보고, 주변인과 많은 이야기를 하면서 자신의 모습을 찾아야 하고 자신이 가장 잘하는 일을 찾게 됩니다.
+<a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=7593&keyword=&gubun=04">구약에서 “들어라 이스라엘” 이라고 하십니다.</a> 우리는 끊임없이 전례를 읽고 성서를 통해서 들어야 합니다. 그러면 들립니다. 인생을 돌아보고, 주변인과 많은 이야기를 하면서 자신의 모습을 찾아야 하고 자신이 가장 잘하는 일을 찾게 됩니다.
 <p>
 내가 가장 기쁘고 잘할 수 있는 일, 바로 그것이 소명입니다.
 
