--- a/_posts/2021-11-14-sos.md
+++ b/_posts/2021-11-14-sos.md
@@ -20,7 +20,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 우리는 대림절 시작 전에 그리스도 왕 대축일을 시행합니다. 그 후에 대림절이 시작되는 것입니다. 이 기간에 공심판(公審判)을 시행하시는 왕이신 그리스도 이야기를 듣게 됩니다. 여러분들은 그리스도를 맞이하실 준비를 하셨는지요? 그런 준비는 사실 어려운 것 같습니다. 세상에는 자칭 메시아라고 하는 사람들이 많습니다. 그러나 복음서에는 주님이 하늘에서 내려오신다고 하십니다. 그 분이 오시는 순간은 공포와 전율의 시간이기도 할 것입니다. 우리는 과연 준비가 되어 있는지 다시 한번 돌아봐야 하겠습니다.
 
-주님은 다니엘 예언서처럼 생명의 책을 들고 오실 것입니다. 그 책에는 세례를 통해, 성체 성사를 통해 주님의 자녀가 된 사람들의 이름이 적혀져 있습니다. 만일 주님의 일에 소홀해져 있다면 그 이름이 흐려져 있을 수도 있습니다. 그렇다면 오직 회개만이 그 이름을 다시 진하게 남아 있게 해 줄 것입니다. 성인의 삶을 사셨던 베네딕토 16세 교황님 조차도 생애를 뒤돌아보면서 주님의 심판이 얼마나 두려운지 신앙적으로 잘 표현하지 못한 아쉬움에 대해서 말씀하셨다고 합니다.
+주님은 (오늘 제1독서) 다니엘 예언서처럼 생명의 책을 들고 오실 것입니다. 그 책에는 세례를 통해, 성체 성사를 통해 주님의 자녀가 된 사람들의 이름이 적혀져 있습니다. 만일 주님의 일에 소홀해져 있다면 그 이름이 흐려져 있을 수도 있습니다. 그렇다면 오직 회개만이 그 이름을 다시 진하게 남아 있게 해 줄 것입니다. 성인의 삶을 사셨던 <a href="https://www.vaticannews.va/ko/vatican-city/news/2022-12/benedetto-xvi-dio-amore-editoriale-tornielli.html">베네딕토 16세 교황님</a>조차도 생애를 뒤돌아보면서 주님의 심판이 얼마나 두려운지 신앙적으로 잘 표현하지 못한 아쉬움에 대해서 말씀하셨다고 합니다.
 
 <a href="https://en.wikipedia.org/wiki/G._K._Chesterton">체스터톤</a>을 아시나요? 그 사람은 영국 작가인데 독자들에게 다음과 같은 질문을 하였습니다. «여러분이 어떤 배를 타고 가는데, 그 배가 난파된 후 어떤 섬에 홀로 있게 된다면 어느 책을 지니고 싶으신가요?» 성경, 혹은 고전 문학을 선택하시겠습니까? 그런데 그 체스터톤이란 작가는 «나라면 배를 만드는 법에 대한 책을 갖겠다.» 고 말했습니다. 위기에 처했을 때
 일단 살고 봐야 하는 것이 아닐까요?
