--- a/_posts/2022-2-27-beam.md
+++ b/_posts/2022-2-27-beam.md
@@ -50,7 +50,7 @@ image: Domenico_Fetti_-_The_Parable_of_the_Mote_and_the_Beam.jpg
 
 인류는 눈 속의 티를 제거하기 위해 다양한 문화를 개발하고 제공하며 우리는 그것을
 이용합니다. 그런데 우리는 눈 안에 티를 갖고 있지 않고, 실상 들보를 갖고 있습니다.
-예수님도 «네 안에 있는 것은 들보이다.» 라고 말씀하셨습니다.
+오늘 복음에서 예수님도 «네 안에 있는 것은 들보이다.» 라고 말씀하셨습니다.
 
 그러나 오늘날 우리는
 들보를 갖고 있는 것을 당연하게 생각합니다. 여러분들 가운데 스위스 친구들
