file move to sub directories

--- a/future-dates/2023-4-23-homily.md
+++ b/future-dates/2023-4-23-homily.md
@@ -15,4 +15,4 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 ㅂㅅㄱ에게 일요일밤 doc으로 받으신
 강론말씀 문서에서
 텍스트를 여기에 넣으시고,
-이 파일을 parent folder로 옮기시면 됩니다.
+이 파일을 _posts/2023 folder로 옮기시면 됩니다.
