--- a/_posts/2022/2022-04-17-mom.md
+++ b/_posts/2022/2022-04-17-mom.md
@@ -21,7 +21,7 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 평화를 빕니다. 부활하신 그리스도의 은총이 여러분과 함께 하기를 기원합니다. 항상
 설레는 마음으로 사순 시기를 시작합니다. 그러나 항상 부족함을 느끼며 부활을
 맞이하는 것 같습니다. 그러나 항상 느끼는 것은 사순 시기를 준비하느라 몸이
-힘들어도, 전례 준비를 준비할 수록 부활의 은총이 더욱 커지는 것을 체험한다는
+힘들어도, 전례를 준비할 수록 부활의 은총이 더욱 커지는 것을 체험한다는
 것입니다. 여러분들도 이 시기를 되돌아보시고 부족한 점이 있다면 용서를 청하시고
 다가오는 부활을 열정으로 준비하시기를 바랍니다.
 
