--- a/_posts/2022/2022-5-22-oma.md
+++ b/_posts/2022/2022-5-22-oma.md
@@ -33,7 +33,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 열정이 없으면 들어도 깨닫지 못하게 됩니다. 그러나 열정이 있으면 깨닫게 됩니다. 열정이 있으면 활기가 생기고 주님 말씀을 체험하고 고귀한 지식에 도달할 수 있는 것입니다.
 
-제가 아는 한 독일 가정이 있습니다. 저는 이 가정과 인연이 있습니다. 이 가정의 장남은 나이가 어느 정도 있고 사회적으로 성공도 하였습니다. 그런데 이 분은 홀로 계신 어머니를 돌보지 않습니다. 유산에만 관심이 있지 어머니를 방문하지도 않습니다.
+제가 아는 한 독일 가정이 있습니다. 저는 이 가정과 인연이 있습니다. 이 가정의 장남은 나이가 어느 정도 있고 사회적으로 성공도 하였습니다. 그런데 이 분은 홀로 계신 어머니를 돌보지 않습니다. 유산에만 관심이 있지, 어머니를 방문하지도 않습니다.
 
 반면 제가 어느날 양로원에 갔는데 한 치매 할머니가 누워계셨습니다. 제가 성호를 그으면 따라 그으시는데 그 할머니는 딸 얼굴과 성호경만 기억하십니다.
 
